*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9073 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -413,27 +413,25 @@ foxtrick.modules_allpages=Модулі, якія працуюць на ўсіх 
 
 Coach=Трэнэр
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Дзеяньні
+
 managerButtons.writeInGuestbook=Напісаць у гасьцёўню
 copy.copyplayerad=Капіяваць аб’яву гульца
 copy.copied=Аб’ява пра гульца была зкапіявана
 
 
+#copy
 CopyRatings.home=Капіяваць рэйтынгі гаспадароў (у HT-ML)
 CopyRatings.away=Капіяваць рэйтынгі гасьцей (у HT-ML)
 CopyRatings.copied=Рэйтынгі былі зкапіяваныя.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copy.skilltable=Капіяваць табліцы здольнасьцей (in HT-ML)
 copy.copied.skilltable=Табліца здольнасьцей  была зкапіявана.
 copy.copied.matchid=ID матчу  быў зкапіяваны.
 copy.copied.postid=ID паведамленьня [post\=%s] было зкапіявана.
 copy.copied.posting=Паведамленьне было зкапіявана.
+
+
 
 #matches
 matches.attackdefensebars=Нападзеньне vs Абарона
@@ -489,7 +487,21 @@ flagCollectionToMap.World=Сьвет
 
 # SkillTable
 Skill_table=Табліца здольнасьцяў
+Switch_view=Зьмяніць выгляд
 
+
+
+# TransferSearchResultFilters
+
+# refer to transfer search form
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Від
+rapidId.viewById=Глядзець па ID
+rapidId.senior=Дарослыя
+
+# SkillTable
+skillTable.switchView=Зьмяніць выгляд табліцы.
 Nationality=Нацыянальнасьць
 Nationality.abbr=Нац
 Flag=Сьцягі
@@ -500,20 +512,6 @@ Age.abbr=Узр
 Match=Сустрэча
 Series=Ліга
 
-
-
-
-
-# TransferSearchResultFilters
-
-# refer to transfer search form
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Глядзець па ID
-rapidId.senior=Дарослыя
-
-# SkillTable
-skillTable.switchView=Зьмяніць выгляд табліцы.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Прадказаны вынік
@@ -535,20 +533,14 @@ CrossTable.table=Шахматная-табліца сэзону
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-button.copy=Капіяваць
-rapidId.view=Від
-Switch_view=Зьмяніць выгляд
-
 # fennec ui
+
+sidebarBox.actions=Дзеяньні
 
 # buttons
 button.cancel=Адмяніць
@@ -560,6 +552,7 @@ button.export=Захаваць
 button.import=Загрузіць
 button.restoreDefault=Вярнуць па-змаўчаньні
 button.disableAll=Адключыць усё
+button.copy=Капіяваць
 
 
 
@@ -571,8 +564,11 @@ button.disableAll=Адключыць усё
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
+
+# Captions and labels of foxtrick preferences
 
 
 
@@ -619,8 +615,6 @@ about.developers=Распрацоўшчыкі
 about.translators=Перакладчыкі
 about.designers=Дызайнеры
 
-
 prefs.restoreDefault.ask=Ці вы ўпэўнены што жадаеце аднавіць налады па-змаўчаньні?\nFirefox павінен быць перазапушчаны, каб зьмены адбыліся\!
-
 
 ###EOF
