--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -599,28 +599,26 @@ HTLanguageChanged=FoxTrick a detectat un canvi d'idioma. S'ha fixat %s com l'idi
 
 Coach=Entrenador
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Accions
+
 managerButtons.writeInGuestbook=Escriu al llibre de visites
 copy.copyplayerad=Copia l’anunci del jugador al porta-retalls
 copy.copied=S’ha copiat l’anunci de jugador al porta-retalls.
 
 
+#copy
 CopyRatings.both=Copia els ratis (HT-ML)
 CopyRatings.home=Copia els ratis de l'quip casolà (HT-ML)
 CopyRatings.away=Copia els ratis de l'equip forà (HT-ML)
 CopyRatings.copied=S’han copiat els ratis al porta-retalls.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copy.skilltable=Copia la taula d'habilitats al porta-retalls (HT-ML)
 copy.copied.skilltable=S’han copiat les dades de la taula d'habilitats al porta-retalls.
 copy.copied.matchid=S’ha copiat l'identificador de partit al porta-retalls.
 copy.copied.postid=El ID de missatge [post\=%s] s'ha copial al porta-retalls.
 copy.copied.posting=S’han copiat els missatge %s al porta-retalls.
+
+
 
 #matches
 matches.attackdefensebars=Atac Vs. Defensa
@@ -677,7 +675,25 @@ flagCollectionToMap.World=Món
 
 # SkillTable
 Skill_table=Taula d'habilitats
+Switch_view=Canvi de vista
 
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.days=Dies\:
+
+# refer to transfer search form
+minimum=Almenys
+maximum=Màxim
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Visualitza
+rapidId.viewById=Mostra per ID
+rapidId.senior=Sènior
+rapidId.youth=Juvenil
+
+# SkillTable
+skillTable.switchView=Canvia la visualització de la taula.
 Nationality=Nacionalitat
 Nationality.abbr=Nac
 Flag=Bandera
@@ -700,24 +716,6 @@ CurrentBidder.abbr=Postor
 CurrentBidderShort=Oferta actual
 CurrentBidderShort.abbr=of
 
-
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.days=Dies\:
-
-# refer to transfer search form
-minimum=Almenys
-maximum=Màxim
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Mostra per ID
-rapidId.senior=Sènior
-rapidId.youth=Juvenil
-
-# SkillTable
-skillTable.switchView=Canvia la visualització de la taula.
-
 # HTMSPrediction
 HTMSPrediction.prediction=Resultat predit
 HTMSPrediction.title=Anàlisis de partit de HTMS
@@ -738,20 +736,14 @@ CrossTable.table=Taula d'encreuaments de lliga
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-button.copy=Copia
-rapidId.view=Visualitza
-Switch_view=Canvi de vista
-
 # fennec ui
+
+sidebarBox.actions=Accions
 
 # buttons
 button.ok=D'acord
@@ -764,6 +756,7 @@ button.export=Desa
 button.import=Carrega
 button.restoreDefault=Recupera valors per defecte
 button.disableAll=Inhabilita'ls tots
+button.copy=Copia
 
 
 
@@ -775,14 +768,17 @@ button.disableAll=Inhabilita'ls tots
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=actiu
 status.enabled=habilitat, però no actiu a %s
 status.disabled=deshabilitat
 
+# Captions and labels of foxtrick preferences
 prefs.title=Preferències de FoxTrick
+
 
 
 # tabs in preferences page
@@ -825,9 +821,7 @@ prefs.additional.HTMLDebugLog=Mostra informació de depuració al peu de la pàg
 
 
 
-
 prefs.restoreDefault.ask=Voleu recuperar els valors per defecte de les preferències?\nCaldrà reiniciar el firefox per activar aquest canvi.
 prefs.disableAllModules.ask=Voleu emprar deshabilitat tots els mòduls?\n
-
 
 ###EOF
