--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -816,9 +816,7 @@ HTLanguageChanged=In den Grundeinstellungen ist eingestellt, dass die FoxTrick-S
 Coach=Trainer
 CurrentSquad=Aktuelles Team
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Aktionen
+
 managerButtons.writeInGuestbook=Eintrag im Gästebuch verfassen
 copy.copyplayerad=Spieleranzeige kopieren
 copy.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
@@ -830,6 +828,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Ratings kopieren (in HT-ML)
 CopyRatings.home=Ratings der Heimmannschaft kopieren (in HT-ML)
 CopyRatings.away=Ratings der Auswärtsmannschaft kopieren (in HT-ML)
@@ -845,6 +844,14 @@ CopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
+copy.copy.skilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
+copy.copied.skilltable=Der Skilltabellen-Quelltext wurde in die Zwischenablage kopiert.
+copy.copied.matchid=MatchID in die Zwischenablage kopiert.
+copy.copied.postid=PostID in die Zwischenablage kopiert.
+copy.copied.posting=Posting in die Zwischenablage kopiert.
+copy.copySelected=Auswahl mit Strg+C kopieren.
+copy.operaPaste=Einfügen mit Umschalt + Linksklick.
+
 MatchReportFormat.MatchReport=Spielbericht
 MatchReportFormat.lineup=Aufstellung
 MatchReportFormat.kickOff=Anstoß
@@ -854,16 +861,6 @@ MatchReportFormat.extraTime=Verlängerung
 MatchReportFormat.penaltyShootOut=Elfmeterschießen
 MatchReportFormat.result=Endergebnis
 
-copy.copySelected=Auswahl mit Strg+C kopieren.
-copy.operaPaste=Einfügen mit Umschalt + Linksklick.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
-copy.copied.skilltable=Der Skilltabellen-Quelltext wurde in die Zwischenablage kopiert.
-copy.copied.matchid=MatchID in die Zwischenablage kopiert.
-copy.copied.postid=PostID in die Zwischenablage kopiert.
-copy.copied.posting=Posting in die Zwischenablage kopiert.
-copy.youthstatistics=Youth Statistics ht-ys.org
 
 #matches
 matches.attackdefensebars=Teamvergleich
@@ -924,7 +921,36 @@ flagCollectionToMap.World=Welt
 
 # SkillTable
 Skill_table=Fähigkeitentabelle
+Switch_view=Ansicht wechseln
+AddHomegrown=Eigengewächse zufügen
+showTimeInClub=Zeit im Verein anzeigen
 
+team.status.booked=Freundschaftsspiel vereinbart
+ShowFriendlyBooked.ShowFriendlies=Freundschaftspiele anzeigen
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Angeschlagene ausblenden
+TransferSearchResultFilters.hideInjured=Verletzte ausblenden
+TransferSearchResultFilters.hideSuspended=Verberge Gesperrte
+TransferSearchResultFilters.days=Tage\:
+
+# refer to transfer search form
+minimum=Mind.
+maximum=Max.
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Anzeigen
+rapidId.viewById=Anzeige nach ID
+rapidId.senior=Senior
+rapidId.youth=Jugend
+rapidId.tournaments=Turniere
+rapidId.tournament=Turnier
+
+# SkillTable
+skillTable.switchView=Wechselt die Ansicht der Tabelle
+skillTable.addHomegrown=Alle eigengewächse des aktuellen Teams zufügen
+skillTable.showTimeInClub=Zeit des Vereinsbeitritts anzeigen
 Nationality=Nationalität
 Nationality.abbr=Nat
 Flag=Flagge
@@ -948,34 +974,6 @@ CurrentBidder=Aktuell höchster Bieter
 CurrentBidder.abbr=Bieter
 CurrentBidderShort=Aktuell höchster Bieter
 CurrentBidderShort.abbr=Bt
-
-
-team.status.booked=Freundschaftsspiel vereinbart
-ShowFriendlyBooked.ShowFriendlies=Freundschaftspiele anzeigen
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Angeschlagene ausblenden
-TransferSearchResultFilters.hideInjured=Verletzte ausblenden
-TransferSearchResultFilters.hideSuspended=Verberge Gesperrte
-TransferSearchResultFilters.days=Tage\:
-
-# refer to transfer search form
-minimum=Mind.
-maximum=Max.
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Anzeige nach ID
-rapidId.senior=Senior
-rapidId.youth=Jugend
-rapidId.tournaments=Turniere
-rapidId.tournament=Turnier
-
-# SkillTable
-skillTable.switchView=Wechselt die Ansicht der Tabelle
-skillTable.addHomegrown=Alle eigengewächse des aktuellen Teams zufügen
-skillTable.showTimeInClub=Zeit des Vereinsbeitritts anzeigen
-foxtrick.SkillTable.detach=Detach
 
 # HTMSPrediction
 HTMSPrediction.prediction=Ergebnisvorhersage
@@ -1023,9 +1021,6 @@ MyMonitor.type.nt=National
 # MarkAllAsRead
 MarkAllAsRead.title=Markiere alle Threads in allen Foren als gelesen
 
-# TickerAlert
-TickerAlert.enable=Aktivieren
-TickerAlert.sound=Hinweiston
 
 # tickers
 ticker.type.welcome=Willkommen
@@ -1044,26 +1039,13 @@ LocalTime.hattrick.title=Anzeige in Hattrickzeit. Klicken um zur Lokalzeit zu we
 LocalTime.local=Lokalzeit
 LocalTime.local.title=Anzeige in Lokalzeit. Klicken um zur Hattrickzeit zu wechseln.
 
-# Links
-Links.feeds=Feeds von Linklisten (in getrennten Zeilen)
-
-#actions
-button.copy=Kopieren
-rapidId.view=Anzeigen
-Switch_view=Ansicht wechseln
-Detach=Detach
-AddHomegrown=Eigengewächse zufügen
-showTimeInClub=Zeit im Verein anzeigen
-button.up=Hoch
-button.down=Runter
-api.clearCache=Cache leeren
-api.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
-
 # fennec ui
 pageAction.rightMenu=Rechtes Menue anzeigen
 pageAction.mainContent=Hauptbereich anzeigen
 pageAction.leftMenu=Linkes Menue anzeigen
 pageAction.all=Zeige alles
+
+sidebarBox.actions=Aktionen
 
 # buttons
 button.ok=OK
@@ -1082,6 +1064,9 @@ button.restoreDefault=Standard wiederherstellen
 button.deleteToken=Lösche Token
 button.disableAll=Alles deaktivieren
 button.revokePermissions=Berechtigungen widerrufen
+button.copy=Kopieren
+button.up=Hoch
+button.down=Runter
 
 status.loading=Lade…
 status.loading.abbr=…
@@ -1098,6 +1083,8 @@ oauth.success=FoxTrick wurde erfolgreich autorisiert\! Bitte lade die Seite neu 
 
 api.failure=Datenzugriff auf Hattrick fehlgeschalgen. Du musst FoxTrick autorisieren um Zugriff auf deine Teamdaten zu erhalten. Wenn du dies bereits getan hast, überprüfe deine Netzwerkverbindung und versuche es später erneut.
 api.serverUnavailable=Server nicht verfügbar
+api.clearCache=Cache leeren
+api.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
 
 exception.error=Fehler %s
 
@@ -1109,14 +1096,22 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Feeds von Linklisten (in getrennten Zeilen)
+TickerAlert.enable=Aktivieren
+TickerAlert.sound=Hinweiston
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=aktiv
 status.enabled=eingeschaltet aber nicht auf %s
 status.disabled=abgeschaltet
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick-Einstellungen
+
+prefs.view.by.category=Nach Kategorie
+prefs.view.by.page=Nach letzter HT-Seite
 
 module.screenshot=Screenshot
 module.link=Du kannst diesen Link kopieren und im Forum einfügen um hierher zu verlinken
@@ -1196,14 +1191,10 @@ about.developers=Entwickler
 about.translators=Übersetzer
 about.designers=Designer
 
-prefs.view.by.category=Nach Kategorie
-prefs.view.by.page=Nach letzter HT-Seite
-
 prefs.restoreDefault.ask=Wirklich alle Einstellungen zurücksetzen?
 prefs.deleteToken.ask=OAuth Token/Secret der Vereinsid %s löschen? 
 prefs.disableAllModules.ask=Sollen wirklich alle Module deaktiviert werden?
 prefs.revokePermissions.ask=Bist Du sicher, dass Du alle optionalen Berechtigungen widerrufen willst?
-
 prefs.getPermissions.alert=%s braucht spezielle Erlaubnis um zu funktionieren. Erlaub den Zugriff im folgenden Dialog.
 
 ###EOF
