--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -200,8 +200,14 @@ skilltable.rebought_youthplayer=rebought youth player
 
 foxtrick.matchdetail.center=Centre
 foxtrick.confirmstripserver=Do you want to strip the Hattrick server from links to make them usable in the forum?
+copy.selectplayer=Select player
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example\: http\://example.org/league/427/). For internal static links skip the server part (Example\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http\://example.org/league/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. Click on the export button and select a file to save the link. Links are appended to the file, hence you can save several links in one file. To import links go to the import section in the preferences. Only entries in the selected file will be imported, which in this case are your links. None of your existing links will be deleted.
+matches.income=Income\:
+copy.Birthdays=Birthdays
+copy.BirthdayToday=Birthdays today
+copy.BirthdayLastWeek=Birthdays last week
+copy.BirthdayNextWeek=Birthdays next week
 
 
 #following string uses pluralForms
@@ -212,22 +218,39 @@ notify.newForumMessage=There is %s new forum reply to you.;There are %s new foru
 
 
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
+
+managerButtons.writeInGuestbook=Write in Guestbook
+copy.copyplayerad=Copy player ad
+copy.copied=The player ad has been copied to the clipboard.
 
 
+#copy
 
 
+copy.copy.skilltable=Copy skill table to clipboard (in HT-ML)
+copy.copied.skilltable=The skill table has been copied to the clipboard.
+copy.copied.matchid=The match ID has been copied to the clipboard.
+copy.copied.postid=Post ID [post\=%s] has been copied to the clipboard.
+copy.copied.posting=Posting %s has been copied to the clipboard.
+copy.copySelected=Copy selection with Ctrl + C.
+copy.operaPaste=Paste with Shift + Left Click.
 
 
 
 #matches
 matches.attackdefensebars=Attack vs Defence
+matches.right=Right
+matches.left=Left
+matches.center=Central
+matches.defense=def
+matches.attack=att
+matches.indfreekick=Ind. set pieces
 matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
 
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
+matches.suppstats=Supporter Statistics
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -237,12 +260,17 @@ LastLineup=Last lineup
 
 
 # FlagCollectionToMap
+flagCollectionToMap.ShowMap=Show map
+flagCollectionToMap.HideMap=Hide map
+flagCollectionToMap.Africa=Africa
+flagCollectionToMap.Asia=Asia
+flagCollectionToMap.Europe=Europe
+flagCollectionToMap.MEast=Middle East
+flagCollectionToMap.SAmerica=South America
+flagCollectionToMap.World=World
 
 # SkillTable
-
-
-TransferCompare=Transfer Compare
-
+AddHomegrown=Add home grown players
 
 
 
@@ -251,13 +279,19 @@ TransferCompare=Transfer Compare
 # refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=View
 rapidId.viewById=View by ID
+rapidId.senior=Senior
+rapidId.youth=Youth
 rapidId.tournaments=Tournaments
 rapidId.tournament=Tournament
 
 # SkillTable
+skillTable.switchView=Switch the view of the table.
 skillTable.addHomegrown=Adds all homegrown players from the current senior squad
 skillTable.showTimeInClub=Shows time since player joined the club's senior squad
+
+TransferCompare=Transfer Compare
 
 # HTMSPrediction
 
@@ -279,25 +313,27 @@ MyMonitor.addHelp=Go to the team that you want to monitor, and you will see a bo
 # MarkAllAsRead
 MarkAllAsRead.title=Mark all threads in all forums as read
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-AddHomegrown=Add home grown players
-api.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
-
 # fennec ui
+pageAction.rightMenu=Show right menu
+pageAction.leftMenu=Show left menu
+
+sidebarBox.actions=Actions
 
 # buttons
+button.copy=Copy
+button.up=Up
+button.down=Down
 
 
 oauth.instructions=A link to chpp.hattrick.org will appear below shortly. Open the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data. FoxTrick will not know your password in the whole process.
 
+api.clearCache=Clear cache
+api.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downloads extra information from Hattrick's servers on demand. Until you close your browser, FoxTrick will use locally stored data afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download the extra information again.
 
 
 # keep the following line untranslated
@@ -306,15 +342,18 @@ oauth.instructions=A link to chpp.hattrick.org will appear below shortly. Open t
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
 toolbar.title=FoxTrick
 toolbar.disableTemporary=Disable temporarily
 toolbar.featureHighlight=Highlight features
 toolbar.translationKeys=Show translation keys
 toolbar.preferences=Preferences
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick Preferences
+
 
 module.screenshot=Screenshot
 
@@ -366,12 +405,10 @@ releaseNotes.showFor=Show release notes for\:
 releaseNotes.version=Version\:
 
 
-
 prefs.restoreDefault.ask=Are you sure you want to restore the default settings?
 prefs.deleteToken.ask=Delete OAuth token/secret for TeamID  %s?
 prefs.disableAllModules.ask=Are you sure you want to disable all modules?
 prefs.revokePermissions.ask=Are you sure you want to revoke all optional permissions?
-
 prefs.getPermissions.alert=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
 
 ###EOF
