--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -815,9 +815,7 @@ HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idiom
 Coach=Entrenador
 CurrentSquad=Club Actual
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Acciones
+
 managerButtons.writeInGuestbook=Escribir en el Libro de Visitas
 copy.copyplayerad=Copiar anuncio de jugador al portapapeles
 copy.copied=El anuncio del jugador ha sido copiado al portapapeles
@@ -829,6 +827,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Copiar las calificaciones (codigo HT-ML)
 CopyRatings.home=Copiar las calificaciones del equipo local (código HT-ML)
 CopyRatings.away=Copiar las calificaciones del equipo visitante (código HT-ML)
@@ -844,6 +843,14 @@ CopyYouth.fixturesSource=Copiar el código de la clasificación
 CopyYouth.fixturesSource.copied=El código de la clasificación ha sido copiado
 CopyYouth.goto=Ir a %s
 
+copy.copy.skilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
+copy.copied.skilltable=El código de la tabla de habilidades ha sido copiada al portapapeles
+copy.copied.matchid=El ID del partido ha sido copiado al portapapeles.
+copy.copied.postid=El ID del mensaje [post\=%s] ha sido copiado al portapapeles.
+copy.copied.posting=El mensaje %s ha sido copiado al portapapeles.
+copy.copySelected=Copiar selección con Ctrl + C.
+copy.operaPaste=Pegar selección con Shift + Clic izquierdo
+
 MatchReportFormat.MatchReport=Reporte del partido
 MatchReportFormat.lineup=Alineación
 MatchReportFormat.kickOff=Inicio
@@ -853,16 +860,6 @@ MatchReportFormat.extraTime=Tiempo Extra
 MatchReportFormat.penaltyShootOut=Ronda de Penales
 MatchReportFormat.result=Resultado
 
-copy.copySelected=Copiar selección con Ctrl + C.
-copy.operaPaste=Pegar selección con Shift + Clic izquierdo
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
-copy.copied.skilltable=El código de la tabla de habilidades ha sido copiada al portapapeles
-copy.copied.matchid=El ID del partido ha sido copiado al portapapeles.
-copy.copied.postid=El ID del mensaje [post\=%s] ha sido copiado al portapapeles.
-copy.copied.posting=El mensaje %s ha sido copiado al portapapeles.
-copy.youthstatistics=Estadísticas juveniles ht-ys.org
 
 #matches
 matches.attackdefensebars=Comparación Ataque vs Defensa
@@ -923,7 +920,36 @@ flagCollectionToMap.World=Mundo
 
 # SkillTable
 Skill_table=Tabla de Habilidades
+Switch_view=Cambiar Vista
+AddHomegrown=Añadir canterano
+showTimeInClub=Mostrar tiempo en el club
 
+team.status.booked=Amistoso pactado
+ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Ocultar lastimados
+TransferSearchResultFilters.hideInjured=Ocultar lesionados
+TransferSearchResultFilters.hideSuspended=Ocultar suspendidos
+TransferSearchResultFilters.days=Días\:
+
+# refer to transfer search form
+minimum=Mínimo
+maximum=Máximo
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Vista
+rapidId.viewById=Vista por ID
+rapidId.senior=Senior
+rapidId.youth=Juvenil
+rapidId.tournaments=Torneos
+rapidId.tournament=Torneo
+
+# SkillTable
+skillTable.switchView=Cambiar la vista de la tabla
+skillTable.addHomegrown=Añadir a todos los canterandos del equipo actual
+skillTable.showTimeInClub=Mostrar el tiempo desde que el jugador se unió al equipo mayor
 Nationality=Nacionalidad
 Nationality.abbr=Nac
 Flag=Bandera
@@ -947,34 +973,6 @@ CurrentBidder=Manager con oferta más alta
 CurrentBidder.abbr=Man
 CurrentBidderShort=Manager con oferta más alta
 CurrentBidderShort.abbr=Mno
-
-
-team.status.booked=Amistoso pactado
-ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Ocultar lastimados
-TransferSearchResultFilters.hideInjured=Ocultar lesionados
-TransferSearchResultFilters.hideSuspended=Ocultar suspendidos
-TransferSearchResultFilters.days=Días\:
-
-# refer to transfer search form
-minimum=Mínimo
-maximum=Máximo
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Vista por ID
-rapidId.senior=Senior
-rapidId.youth=Juvenil
-rapidId.tournaments=Torneos
-rapidId.tournament=Torneo
-
-# SkillTable
-skillTable.switchView=Cambiar la vista de la tabla
-skillTable.addHomegrown=Añadir a todos los canterandos del equipo actual
-skillTable.showTimeInClub=Mostrar el tiempo desde que el jugador se unió al equipo mayor
-foxtrick.SkillTable.detach=Separar
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predicción resultado
@@ -1022,9 +1020,6 @@ MyMonitor.type.nt=Nacional
 # MarkAllAsRead
 MarkAllAsRead.title=Marcar los temas en todos los foros como leídos
 
-# TickerAlert
-TickerAlert.enable=Activar
-TickerAlert.sound=Sonido
 
 # tickers
 ticker.type.welcome=Mensaje de bienvenida
@@ -1043,26 +1038,13 @@ LocalTime.hattrick.title=Tiempo/Hora en Hattrick. Clic en el reloj para cambiar 
 LocalTime.local=Tiempo/Hora local
 LocalTime.local.title=Tiempo/hora local. Clicen el reloj para cambiar a la hora de Hattrick
 
-# Links
-Links.feeds=Fuentes de listas de enlace (separadas por saltos de línea)
-
-#actions
-button.copy=Copiar
-rapidId.view=Vista
-Switch_view=Cambiar Vista
-Detach=Separar
-AddHomegrown=Añadir canterano
-showTimeInClub=Mostrar tiempo en el club
-button.up=Arriba
-button.down=Abajo
-api.clearCache=Borrar cache
-api.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
-
 # fennec ui
 pageAction.rightMenu=Mostrar barra dereacha
 pageAction.mainContent=Mostrar contenido principal
 pageAction.leftMenu=Mostrar barra izquierda
 pageAction.all=Mostrar todo
+
+sidebarBox.actions=Acciones
 
 # buttons
 button.ok=OK
@@ -1081,6 +1063,9 @@ button.restoreDefault=Restaurar predeterminado
 button.deleteToken=Borrar token
 button.disableAll=Deshabilitar todo
 button.revokePermissions=Revocar permisos
+button.copy=Copiar
+button.up=Arriba
+button.down=Abajo
 
 status.loading=Cargando…
 status.loading.abbr=…
@@ -1097,6 +1082,8 @@ oauth.success=FoxTrick ha sido autorizado satisfactoriamente\! Por favor recarga
 
 api.failure=El acceso a los datos en Hattrick falló. Necesitas autorizar a Foxtrick para que acceda a los datos de tu equipo. Si ya lo has hecho, revisa tu conexión o inténtalo más tarde.
 api.serverUnavailable=Servidor no disponible
+api.clearCache=Borrar cache
+api.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
 
 exception.error=Error %s
 
@@ -1108,8 +1095,12 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Fuentes de listas de enlace (separadas por saltos de línea)
+TickerAlert.enable=Activar
+TickerAlert.sound=Sonido
 
+#toolbar
 toolbar.title=FoxTrick
 toolbar.disableTemporary=Deshabilitar temporalmente
 toolbar.featureHighlight=Resaltar características
@@ -1119,7 +1110,11 @@ status.active=activo
 status.enabled=habilitado, pero no activo en %s
 status.disabled=inhabilitado
 
+# Captions and labels of foxtrick preferences
 prefs.title=Preferencias de FoxTrick
+
+prefs.view.by.category=Ver por cateoría
+prefs.view.by.page=Ver de acuerdo a última página de HT
 
 module.screenshot=Captura de pantalla
 module.link=Podés copiar y pegar este vínculo en el foro para mandarte aquí
@@ -1200,14 +1195,10 @@ about.developers=Desarrolladores
 about.translators=Traductores
 about.designers=Deseñadores
 
-prefs.view.by.category=Ver por cateoría
-prefs.view.by.page=Ver de acuerdo a última página de HT
-
 prefs.restoreDefault.ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
 prefs.deleteToken.ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s?
 prefs.disableAllModules.ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
 prefs.revokePermissions.ask=¿Está seguro que desea revocar todos los permisos opcionales?
-
 prefs.getPermissions.alert=%s necesita autorización para funcionar. Permita el acceso en el siguiente cuadro de dialogo. Si lo deniega esta característica del modulo va a ser deshabilitada.
 
 ###EOF
