--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -752,9 +752,7 @@ HTLanguageChanged=Has seleccionado en las preferencias principales de Foxtrick q
 Coach=Entrenador
 CurrentSquad=Formación actual
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Acciones
+
 managerButtons.writeInGuestbook=Escribir en el libro de visitas
 copy.copyplayerad=Copiar información de jugador a portapapeles
 copy.copied=La información del jugador ha sido copiada al portapapeles.
@@ -766,6 +764,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Copiar calificaciones (en HT-ML)
 CopyRatings.home=Copiar calificaciones equipo local (en HT-ML)
 CopyRatings.away=Copiar calificaciones equipo visitante (en HT-ML)
@@ -781,6 +780,14 @@ CopyYouth.fixturesSource=Copiar código HTML de los resultados
 CopyYouth.fixturesSource.copied=El código fuente de los resultados ha sido copiado.
 CopyYouth.goto=Ir a %s
 
+copy.copy.skilltable=Copiar tabla de habilidades al portapapeles (estilo Hattrick Foro)
+copy.copied.skilltable=la tabla de habilidades se ha copiado al portapapeles
+copy.copied.matchid=El id del partido ha sido copiado al portapapeles.
+copy.copied.postid=El id del post ha sido copiado al portapapeles.
+copy.copied.posting=El mensaje ha sido copiado al portapapeles.
+copy.copySelected=Copiar selección con Ctrl + C.
+copy.operaPaste=Pegar con Mayús + clic izquierdo.
+
 MatchReportFormat.MatchReport=Informe del partido
 MatchReportFormat.lineup=Alineación
 MatchReportFormat.kickOff=Chutar
@@ -790,16 +797,6 @@ MatchReportFormat.extraTime=Tiempo extra
 MatchReportFormat.penaltyShootOut=Tanda de penaltis
 MatchReportFormat.result=Resultado
 
-copy.copySelected=Copiar selección con Ctrl + C.
-copy.operaPaste=Pegar con Mayús + clic izquierdo.
-
-copy.youthclub=Hattrick-youthclub.org
-copy.copy.skilltable=Copiar tabla de habilidades al portapapeles (estilo Hattrick Foro)
-copy.copied.skilltable=la tabla de habilidades se ha copiado al portapapeles
-copy.copied.matchid=El id del partido ha sido copiado al portapapeles.
-copy.copied.postid=El id del post ha sido copiado al portapapeles.
-copy.copied.posting=El mensaje ha sido copiado al portapapeles.
-copy.youthstatistics=Estadísticas de juveniles ht-ys.org
 
 #matches
 matches.attackdefensebars=Comparación Ataque vs Defensa
@@ -860,7 +857,34 @@ flagCollectionToMap.World=Mundial
 
 # SkillTable
 Skill_table=Tabla de habilidades
+Switch_view=Cambiar vista
+AddHomegrown=Añadir jugadores promocionados por el club
+showTimeInClub=Mostrar tiempo en el club
 
+team.status.booked=Amistoso pactado
+ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Ocultar lastimados
+TransferSearchResultFilters.hideInjured=Ocultar lesionados
+TransferSearchResultFilters.hideSuspended=Ocultar sancionados
+TransferSearchResultFilters.days=Días\:
+
+# refer to transfer search form
+minimum=Al menos
+maximum=Máximo
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Ver
+rapidId.viewById=Ver por ID
+rapidId.senior=Adulto
+rapidId.youth=Juvenil
+
+# SkillTable
+skillTable.switchView=Cambia la vista de la tabla.
+skillTable.addHomegrown=Añadir todos los jugadores promocionados por el equipo desde el actual
+skillTable.showTimeInClub=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
 Nationality=Nacionalidad
 Nationality.abbr=Nac
 Flag=Bandera
@@ -884,32 +908,6 @@ CurrentBidder=Puja actual mayor
 CurrentBidder.abbr=Pujador
 CurrentBidderShort=Pujador actual mayor
 CurrentBidderShort.abbr=Puj.
-
-
-team.status.booked=Amistoso pactado
-ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Ocultar lastimados
-TransferSearchResultFilters.hideInjured=Ocultar lesionados
-TransferSearchResultFilters.hideSuspended=Ocultar sancionados
-TransferSearchResultFilters.days=Días\:
-
-# refer to transfer search form
-minimum=Al menos
-maximum=Máximo
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Ver por ID
-rapidId.senior=Adulto
-rapidId.youth=Juvenil
-
-# SkillTable
-skillTable.switchView=Cambia la vista de la tabla.
-skillTable.addHomegrown=Añadir todos los jugadores promocionados por el equipo desde el actual
-skillTable.showTimeInClub=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
-foxtrick.SkillTable.detach=Desasignar
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predicción del resultado
@@ -954,9 +952,6 @@ MyMonitor.type.nt=Selección
 # MarkAllAsRead
 MarkAllAsRead.title=Marca los mensajes en todos los foros como leídos
 
-# TickerAlert
-TickerAlert.enable=Habilitar
-TickerAlert.sound=Sonido
 
 # tickers
 ticker.type.welcome=Mensaje de bienvenida
@@ -975,24 +970,13 @@ LocalTime.hattrick.title=Hora de la zona Hattrick (Suecia). Click para cambiar a
 LocalTime.local=Hora local
 LocalTime.local.title=Hora local. Click para cambiar a hora de la zona Hattrick (Suecia).
 
-# Links
-
-#actions
-button.copy=Copiar
-rapidId.view=Ver
-Switch_view=Cambiar vista
-Detach=Desasignar
-AddHomegrown=Añadir jugadores promocionados por el club
-showTimeInClub=Mostrar tiempo en el club
-button.up=Arriba
-button.down=Abajo
-api.clearCache=Eliminar la caché
-
 # fennec ui
 pageAction.rightMenu=Mostrar la barra de la derecha
 pageAction.mainContent=Mostrar contenido principal
 pageAction.leftMenu=Mostrar la barra de la izquierda
 pageAction.all=Mostrar todo
+
+sidebarBox.actions=Acciones
 
 # buttons
 button.ok=OK
@@ -1011,6 +995,9 @@ button.restoreDefault=Restaurar valores por defecto
 button.deleteToken=Eliminar símbolo
 button.disableAll=Deshabilitar todo
 button.revokePermissions=Revocar permisos
+button.copy=Copiar
+button.up=Arriba
+button.down=Abajo
 
 status.loading=Cargando…
 status.loading.abbr=…
@@ -1027,6 +1014,7 @@ oauth.success=¡Foxtrick ha sido autorizado\! Por favor, recarga la página para
 
 api.failure=Acceso a Hattrick erróneo. Necesitas autorizar a FoxTrick a que acceda a los datos de tu equipo. Si ya lo has hecho, comprueba tu red o inténtalo más tarde.
 api.serverUnavailable=Servidor no disponible
+api.clearCache=Eliminar la caché
 
 exception.error=Error %s
 
@@ -1038,14 +1026,21 @@ foxtrick.log.env=Versión %1, %2 plataforma, %3 local, %4 layout, %5 dirección
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+TickerAlert.enable=Habilitar
+TickerAlert.sound=Sonido
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=Activo
 status.enabled=Habilitado pero no activo en &s
 status.disabled=Deshabilitado
 
+# Captions and labels of foxtrick preferences
 prefs.title=Preferencias
+
+prefs.view.by.category=Por categoría
+prefs.view.by.page=Por última página HT
 
 module.screenshot=Captura de pantalla
 
@@ -1114,13 +1109,9 @@ about.developers=Desarrolladores
 about.translators=Traductores
 about.designers=Diseñadores
 
-prefs.view.by.category=Por categoría
-prefs.view.by.page=Por última página HT
-
 prefs.restoreDefault.ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará\!
 prefs.disableAllModules.ask=¿Desea deshabilitar todos los módulos?\n
 prefs.revokePermissions.ask=¿Está seguro que desea revocar todos los permisos opcionales?
-
 prefs.getPermissions.alert=%s necesita permisos para trabajar. Otórgaselos en el siguiente diálogo.
 
 ###EOF
