--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -159,10 +159,10 @@ foxtrick.TeamStats.TransferListed.label=Müüginimekirjas
 
 
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 
 
+
+#copy
 
 
 
@@ -187,9 +187,6 @@ Guestbook=Külalisteraamat
 
 
 
-
-
-
 # TransferSearchResultFilters
 
 # refer to transfer search form
@@ -197,6 +194,7 @@ Guestbook=Külalisteraamat
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+
 
 # HTMSPrediction
 
@@ -213,8 +211,6 @@ Guestbook=Külalisteraamat
 
 # MarkAllAsRead
 
-# TickerAlert
-TickerAlert.enable=Luba
 
 # tickers
 ticker.type.guestbook=Külalisteraamat
@@ -222,11 +218,8 @@ ticker.type.mail=HT-Mail
 
 # LocalTime
 
-# Links
-
-#actions
-
 # fennec ui
+
 
 # buttons
 
@@ -240,8 +233,12 @@ ticker.type.mail=HT-Mail
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+TickerAlert.enable=Luba
 
+#toolbar
+
+# Captions and labels of foxtrick preferences
 
 
 
@@ -250,8 +247,6 @@ ticker.type.mail=HT-Mail
 
 
 # NOTE - please preserve the braces, inner content will be converted to link
-
-
 
 
 
