--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -810,9 +810,7 @@ HTLanguageChanged=Olet asettanut Foxtrick-kielen automaattisen mukautumisen Foxt
 Coach=Valmentaja
 CurrentSquad=Nykyinen pelaajisto
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Toiminnot
+
 managerButtons.writeInGuestbook=Kirjoita Vieraskirjaan
 copy.copyplayerad=Kopioi pelaamainos leikepöytään
 copy.copied=Pelaajamainos on kopioitu leikepöytään.
@@ -824,6 +822,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Kopioi arvostelut HT-ML-muodossa
 CopyRatings.home=Kopioi kotijoukkueen arvostelut HT-ML-muodossa
 CopyRatings.away=Kopioi vierasjoukkueen arvostelut HT-ML-muodossa
@@ -839,6 +838,14 @@ CopyYouth.fixturesSource=Kopioi otteluohjelmasivun lähdekoodi
 CopyYouth.fixturesSource.copied=Otteluohjelmasivun lähdekoodi on kopioitu.
 CopyYouth.goto=Mene\: %s
 
+copy.copy.skilltable=Kopioi taitotaulu leikepöydälle HT-ML-muodossa
+copy.copied.skilltable=Taitotaulu on kopioitu leikepöytään.
+copy.copied.matchid=OtteluID on kopioitu leikepöytään.
+copy.copied.postid=ViestiID [post\=%s] on kopioitu leikepöytään.
+copy.copied.posting=Viesti %s on kopioitu leikepöytään.
+copy.copySelected=Kopioi valittu yhdistelmällä ctrl+C.
+copy.operaPaste=Liitä pitämällä Shift pohjassa ja klikkaamalla hiiren vasenta.
+
 MatchReportFormat.MatchReport=Otteluraportti
 MatchReportFormat.lineup=Kokoonpano
 MatchReportFormat.kickOff=Aloituspotku
@@ -848,16 +855,6 @@ MatchReportFormat.extraTime=Jatkoaika
 MatchReportFormat.penaltyShootOut=Rangaistuspotkukilpailu
 MatchReportFormat.result=Lopputulos
 
-copy.copySelected=Kopioi valittu yhdistelmällä ctrl+C.
-copy.operaPaste=Liitä pitämällä Shift pohjassa ja klikkaamalla hiiren vasenta.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Kopioi taitotaulu leikepöydälle HT-ML-muodossa
-copy.copied.skilltable=Taitotaulu on kopioitu leikepöytään.
-copy.copied.matchid=OtteluID on kopioitu leikepöytään.
-copy.copied.postid=ViestiID [post\=%s] on kopioitu leikepöytään.
-copy.copied.posting=Viesti %s on kopioitu leikepöytään.
-copy.youthstatistics=Junioritilastoja ht-ys.org
 
 #matches
 matches.attackdefensebars=Hyökkäys vs Puolustus
@@ -918,7 +915,36 @@ flagCollectionToMap.World=Maailma
 
 # SkillTable
 Skill_table=Taitotaulu
+Switch_view=Vaihda näkymää
+AddHomegrown=Lisää seuran omat kasvatit
+showTimeInClub=Näytä seurassa vietetty aika
 
+team.status.booked=Ystävyysottelu sovittu
+ShowFriendlyBooked.ShowFriendlies=Näytä ystävyysottelut
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Piilota kolhiintuneet
+TransferSearchResultFilters.hideInjured=Piilota loukkaantuneet
+TransferSearchResultFilters.hideSuspended=Piilota pelikieltoiset
+TransferSearchResultFilters.days=Päivää\:
+
+# refer to transfer search form
+minimum=Vähintään
+maximum=Enintään
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Katso
+rapidId.viewById=Katso ID\:llä
+rapidId.senior=Edustus
+rapidId.youth=Juniori
+rapidId.tournaments=Turnaukset
+rapidId.tournament=Turnaus
+
+# SkillTable
+skillTable.switchView=Vaihda taulukon näkymää
+skillTable.addHomegrown=Lisää kaikki kasvattipelaajat nykyjoukkueesta
+skillTable.showTimeInClub=Näyttää pelaajan edustusjoukkueessa viettämän ajan
 Nationality=Kansallisuus
 Nationality.abbr=Ksl
 Flag=Lippu
@@ -942,34 +968,6 @@ CurrentBidder=Korkein nykyinen tarjous
 CurrentBidder.abbr=Ostaja
 CurrentBidderShort=Korkein nykyinen tarjous
 CurrentBidderShort.abbr=Kt
-
-
-team.status.booked=Ystävyysottelu sovittu
-ShowFriendlyBooked.ShowFriendlies=Näytä ystävyysottelut
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Piilota kolhiintuneet
-TransferSearchResultFilters.hideInjured=Piilota loukkaantuneet
-TransferSearchResultFilters.hideSuspended=Piilota pelikieltoiset
-TransferSearchResultFilters.days=Päivää\:
-
-# refer to transfer search form
-minimum=Vähintään
-maximum=Enintään
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Katso ID\:llä
-rapidId.senior=Edustus
-rapidId.youth=Juniori
-rapidId.tournaments=Turnaukset
-rapidId.tournament=Turnaus
-
-# SkillTable
-skillTable.switchView=Vaihda taulukon näkymää
-skillTable.addHomegrown=Lisää kaikki kasvattipelaajat nykyjoukkueesta
-skillTable.showTimeInClub=Näyttää pelaajan edustusjoukkueessa viettämän ajan
-foxtrick.SkillTable.detach=Irrota
 
 # HTMSPrediction
 HTMSPrediction.prediction=Arvioitu tulos
@@ -1017,9 +1015,6 @@ MyMonitor.type.nt=Kansallinen
 # MarkAllAsRead
 MarkAllAsRead.title=Merkkaa puut kaikilla foorumeilla luetuiksi
 
-# TickerAlert
-TickerAlert.enable=Salli
-TickerAlert.sound=Ääni
 
 # tickers
 ticker.type.welcome=Tervetuloa-viesti
@@ -1038,25 +1033,13 @@ LocalTime.hattrick.title=Aika on Hattrickin aikaa. Klikkaa kelloa vaihtaaksesi p
 LocalTime.local=Paikallinen aika
 LocalTime.local.title=Aika on paikallista aikaa. Klikkaa kelloa vaihtaaksesi Hattrickin aikaan.
 
-# Links
-
-#actions
-button.copy=Kopioi
-rapidId.view=Katso
-Switch_view=Vaihda näkymää
-Detach=Irroita
-AddHomegrown=Lisää seuran omat kasvatit
-showTimeInClub=Näytä seurassa vietetty aika
-button.up=Ylös
-button.down=Alas
-api.clearCache=Tyhjennä välimuisti
-api.clearCache.title=Tyhjentää Foxtrickin Xml-välimuistin. Foxtrick lataa lisätietoa Hattrickin servereiltä tarvitessaan. Se käyttää noita koneellesi tallennettuja tietoja kunnes suljet selaimen. Joskus tiedot voivat vanhentua. Tyhjennä välimuisti jos haluat, että Foxtick lataa tiedot uudelleen.
-
 # fennec ui
 pageAction.rightMenu=Näytä oikea sivupalkki
 pageAction.mainContent=Näytä pääasiallinen sisältö
 pageAction.leftMenu=Näytä vasen sivupalkki
 pageAction.all=Näytä kaikki
+
+sidebarBox.actions=Toiminnot
 
 # buttons
 button.ok=OK
@@ -1074,6 +1057,9 @@ button.import=Lataa
 button.restoreDefault=Palauta oletukset
 button.disableAll=Hylkää kaikki
 button.revokePermissions=Kumoa oikeudet
+button.copy=Kopioi
+button.up=Ylös
+button.down=Alas
 
 status.loading=Lataa...
 status.loading.abbr=…
@@ -1090,6 +1076,8 @@ oauth.success=FoxTrick on onnistuneesti auktorisoitu\! Uudelleenlataa tämä siv
 
 api.failure=Data pääsy Hattrickiin epäonnistui. Sinun täytyy auktorisoida FoxTrick voidakseen käyttää joukkueesi dataa. Jos olet tehnyt niin, tarkista internet-yhteys tai yritä myöhemmin uudelleen.
 api.serverUnavailable=Palvelin ei käytettävissä
+api.clearCache=Tyhjennä välimuisti
+api.clearCache.title=Tyhjentää Foxtrickin Xml-välimuistin. Foxtrick lataa lisätietoa Hattrickin servereiltä tarvitessaan. Se käyttää noita koneellesi tallennettuja tietoja kunnes suljet selaimen. Joskus tiedot voivat vanhentua. Tyhjennä välimuisti jos haluat, että Foxtick lataa tiedot uudelleen.
 
 exception.error=Virhe %s
 
@@ -1100,8 +1088,11 @@ foxtrick.log.header=FoxTrickin logi
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+TickerAlert.enable=Salli
+TickerAlert.sound=Ääni
 
+#toolbar
 toolbar.title=FoxTrick
 toolbar.featureHighlight=Korosta toiminnot
 toolbar.preferences=Asetukset
@@ -1109,7 +1100,11 @@ status.active=aktiivinen
 status.enabled=sallittu, mutta ei aktiivinen %s\:lla
 status.disabled=lamautettu
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrickin asetukset
+
+prefs.view.by.category=Näytä kategorioittain
+prefs.view.by.page=Näytä viimeisen HT-sivun mukaan
 
 module.screenshot=Kuvakaappaus
 module.link=Voit kopioida ja liittää suoraan tänne osoittavan linkin foorumille
@@ -1186,13 +1181,9 @@ about.developers=Kehittäjät
 about.translators=Kääntäjät
 about.designers=Muotoilijat
 
-prefs.view.by.category=Näytä kategorioittain
-prefs.view.by.page=Näytä viimeisen HT-sivun mukaan
-
 prefs.restoreDefault.ask=Oletko varma, että haluat palauttaa oletusasetukset?\nFirefox täytyy uudelleenkäynnistää tämän aikaan saamiseksi\!
 prefs.disableAllModules.ask=Oletko varma, että haluat kytkeä kaikki moduulit pois päältä?\n
 prefs.revokePermissions.ask=Haluatko varmasti kumota kaikki valinnaiset oikeudet?
-
 prefs.getPermissions.alert=%s tarvitsee luvan toimiakseen. Salli pääsy seuraavassa valintaikkunassa.
 
 ###EOF
