--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -815,9 +815,7 @@ HTLanguageChanged=Vous devez indiquer dans les préférences générales de FoxT
 Coach=Entraineur
 CurrentSquad=Équipe actuelle
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Actions
+
 managerButtons.writeInGuestbook=Ecrire dans le Livre d'or
 copy.copyplayerad=Copier les details du joueur dans le presse-papiers
 copy.copied=Les détails du joueur ont été copiés dans le presse-papiers.
@@ -829,6 +827,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Copier les notes (en HT-ML)
 CopyRatings.home=Copier les performances détaillés de l'équipe jouant à domicile dans le presse-papiers (style HT-BBCode)
 CopyRatings.away=Copier les performances détaillés de l'équipe jouant à l'extérieur dans le presse-papiers (style HT-BBCode)
@@ -844,6 +843,14 @@ CopyYouth.fixturesSource=Copier le code source du calendrier des matchs
 CopyYouth.fixturesSource.copied=Le code source du calendrier a été copié.
 CopyYouth.goto=Aller à %s
 
+copy.copy.skilltable=Copier le tableau de compétences dans le presse-papiers (style HT Forum)
+copy.copied.skilltable=Le tableau de compétences a été copié dans le presse-papiers.
+copy.copied.matchid=L'identifiant du match a été copié dans le presse-papiers.
+copy.copied.postid=L'identifiant du sujet a été copié dans le presse-papiers.
+copy.copied.posting=Le message a été copié dans le presse-papiers.
+copy.copySelected=Copier la sélection avec Ctrl + c
+copy.operaPaste=Coller avec Shift + clic gauche.
+
 MatchReportFormat.MatchReport=Résumé du Match
 MatchReportFormat.lineup=Composition des équipes
 MatchReportFormat.kickOff=Coup d'envoi
@@ -853,16 +860,6 @@ MatchReportFormat.extraTime=Prolongation
 MatchReportFormat.penaltyShootOut=Tirs au but
 MatchReportFormat.result=Score final
 
-copy.copySelected=Copier la sélection avec Ctrl + c
-copy.operaPaste=Coller avec Shift + clic gauche.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Copier le tableau de compétences dans le presse-papiers (style HT Forum)
-copy.copied.skilltable=Le tableau de compétences a été copié dans le presse-papiers.
-copy.copied.matchid=L'identifiant du match a été copié dans le presse-papiers.
-copy.copied.postid=L'identifiant du sujet a été copié dans le presse-papiers.
-copy.copied.posting=Le message a été copié dans le presse-papiers.
-copy.youthstatistics=Statistiques de l'équipe des jeunes ht-ys.org
 
 #matches
 matches.attackdefensebars=Attaques / Défenses
@@ -923,7 +920,36 @@ flagCollectionToMap.World=Monde
 
 # SkillTable
 Skill_table=Tableau des compétences
+Switch_view=Changer de vue
+AddHomegrown=Ajouter les joueurs locaux
+showTimeInClub=Afficher l'heure du l'équipe
 
+team.status.booked=Match amical arrangé
+ShowFriendlyBooked.ShowFriendlies=Afficher les matchs amicaux
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Masquer les joueurs légèrement blessés
+TransferSearchResultFilters.hideInjured=Masquer les joueurs blessés
+TransferSearchResultFilters.hideSuspended=Masquer les joueurs suspendus
+TransferSearchResultFilters.days=Jours \:
+
+# refer to transfer search form
+minimum=Au moins
+maximum=Maximum
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Voir
+rapidId.viewById=Recherche par ID
+rapidId.senior=Senior
+rapidId.youth=Junior
+rapidId.tournaments=Tournois
+rapidId.tournament=Tournoi
+
+# SkillTable
+skillTable.switchView=Trier l'affichage du tableau.
+skillTable.addHomegrown=Ajoute tous les joueurs issus du club de l'équipe senior en place
+skillTable.showTimeInClub=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 Nationality=Nationalité
 Nationality.abbr=Nat
 Flag=Drapeau
@@ -947,34 +973,6 @@ CurrentBidder=Actuel meilleur enchérisseur
 CurrentBidder.abbr=Enchérisseur
 CurrentBidderShort=Actuel meilleur enchérisseur
 CurrentBidderShort.abbr=AC
-
-
-team.status.booked=Match amical arrangé
-ShowFriendlyBooked.ShowFriendlies=Afficher les matchs amicaux
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Masquer les joueurs légèrement blessés
-TransferSearchResultFilters.hideInjured=Masquer les joueurs blessés
-TransferSearchResultFilters.hideSuspended=Masquer les joueurs suspendus
-TransferSearchResultFilters.days=Jours \:
-
-# refer to transfer search form
-minimum=Au moins
-maximum=Maximum
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Recherche par ID
-rapidId.senior=Senior
-rapidId.youth=Junior
-rapidId.tournaments=Tournois
-rapidId.tournament=Tournoi
-
-# SkillTable
-skillTable.switchView=Trier l'affichage du tableau.
-skillTable.addHomegrown=Ajoute tous les joueurs issus du club de l'équipe senior en place
-skillTable.showTimeInClub=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
-foxtrick.SkillTable.detach=Détacher
 
 # HTMSPrediction
 HTMSPrediction.prediction=Résultat prévu
@@ -1022,9 +1020,6 @@ MyMonitor.type.nt=National
 # MarkAllAsRead
 MarkAllAsRead.title=Marquer les fils de toutes les tribunes comme lus
 
-# TickerAlert
-TickerAlert.enable=Activer
-TickerAlert.sound=Son
 
 # tickers
 ticker.type.welcome=Salutation
@@ -1043,26 +1038,13 @@ LocalTime.hattrick.title=Heure d'Hattrick. Cliquez sur l'horloge pour passer à 
 LocalTime.local=Heure locale
 LocalTime.local.title=Heure du fuseau horaire local. Cliquez sur l'horloge pour passer à l'heure d'Hattrick.
 
-# Links
-Links.feeds=Listes des liens vers un flux (séparés par des sauts de ligne)
-
-#actions
-button.copy=Copier
-rapidId.view=Voir
-Switch_view=Changer de vue
-Detach=Détacher
-AddHomegrown=Ajouter les joueurs locaux
-showTimeInClub=Afficher l'heure du l'équipe
-button.up=Vers le haut
-button.down=Vers le bas
-api.clearCache=Vider le cache
-api.clearCache.title=Effacer le cache Xml de FoxTrick. FoxTrick télécharge au fur et à mesure des informations supplémentaires provenant des serveurs de Hattrick. FoxTrick utilise les données stockées localement jusqu'à ce que vous fermiez votre navigateur. En de rares occasions, ces données peuvnt être erronées. Vider le cache permettra à FoxTrick de télécharger de nouveau les informations supplémentaires.
-
 # fennec ui
 pageAction.rightMenu=Afficher la barre de droite
 pageAction.mainContent=Afficher le menu principal
 pageAction.leftMenu=Afficher la barre de gauche
 pageAction.all=Tout Montrer
+
+sidebarBox.actions=Actions
 
 # buttons
 button.ok=OK
@@ -1081,6 +1063,9 @@ button.restoreDefault=Restaurer les valeurs par défaut
 button.deleteToken=Supprimer le jeton
 button.disableAll=Désactiver
 button.revokePermissions=Révoquer les autorisations
+button.copy=Copier
+button.up=Vers le haut
+button.down=Vers le bas
 
 status.loading=Chargement en cours...
 status.loading.abbr=…
@@ -1097,6 +1082,8 @@ oauth.success=FoxTrick a été autorisé avec succès \! Veuillez recharger cett
 
 api.failure=Échec de l'accès aux données à Hattrick. Vous devez autoriser FoxTrick pour accéder aux données de votre équipe. Si vous l'avez déjà fait, vérifier votre connexion réseau ou réessayer plus tard.
 api.serverUnavailable=Serveur indisponible
+api.clearCache=Vider le cache
+api.clearCache.title=Effacer le cache Xml de FoxTrick. FoxTrick télécharge au fur et à mesure des informations supplémentaires provenant des serveurs de Hattrick. FoxTrick utilise les données stockées localement jusqu'à ce que vous fermiez votre navigateur. En de rares occasions, ces données peuvnt être erronées. Vider le cache permettra à FoxTrick de télécharger de nouveau les informations supplémentaires.
 
 exception.error=Erreur %s
 
@@ -1107,8 +1094,12 @@ foxtrick.log.header=Journal de FoxTrick
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Listes des liens vers un flux (séparés par des sauts de ligne)
+TickerAlert.enable=Activer
+TickerAlert.sound=Son
 
+#toolbar
 toolbar.title=FoxTrick
 toolbar.disableTemporary=Désactiver temporairement
 toolbar.featureHighlight=Mettre en évidence les fonctionnalités
@@ -1118,7 +1109,11 @@ status.active=activé
 status.enabled=activé, mais sans effet sur %s
 status.disabled=desactivé
 
+# Captions and labels of foxtrick preferences
 prefs.title=Préférences FoxTrick
+
+prefs.view.by.category=Afficher par catégorie
+prefs.view.by.page=Vu par dernière page HT
 
 module.screenshot=Capture d'écran
 module.link=Vous pouvez copier-coller ce lien pour le forum directement ici
@@ -1199,14 +1194,10 @@ about.developers=Développeurs
 about.translators=Traducteurs
 about.designers=Designers
 
-prefs.view.by.category=Afficher par catégorie
-prefs.view.by.page=Vu par dernière page HT
-
 prefs.restoreDefault.ask=Êtes-vous sûr que vous souhaitez restaurer les paramètres par défaut ?\nFirefox doit être redémarré pour prendre en compte les paramètres\!
 prefs.deleteToken.ask=Supprimer OAuth token/secret pour la TeamID  %s?
 prefs.disableAllModules.ask=Êtes-vous sûr de vouloir désactiver tous les modules ?\n
 prefs.revokePermissions.ask=Êtes-vous sûr que vous voulez révoquer toutes les autorisations facultatives ?
-
 prefs.getPermissions.alert=%s doit obtenir une permission pour fonctionner. Autorisez l'accès dans la boîte de dialogue suivante. Si vous refusez, cette fonction sera désactivée.
 
 ###EOF
