--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -294,14 +294,13 @@ matches.income=Ynkomsten\:
 
 Coach=Coach
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Aksjes
+
 managerButtons.writeInGuestbook=Skriuw yn gastenboek
 copy.copyplayerad=Kopiearje spileradvertinsje nei klemboerd
 copy.copied=De spileradvertinsje is kopiearre nei it klemboerd.
 
 
+#copy
 CopyRatings.copied=De wurdearrings binne kopiearre nei it klemboerd.
 
 
@@ -357,9 +356,6 @@ flagCollectionToMap.World=Wrâld
 
 
 
-
-
-
 # TransferSearchResultFilters
 
 # refer to transfer search form
@@ -367,6 +363,7 @@ flagCollectionToMap.World=Wrâld
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+
 
 # HTMSPrediction
 
@@ -385,22 +382,18 @@ HTMSPoints=HTMS-punten\:
 
 # MarkAllAsRead
 
-# TickerAlert
-TickerAlert.sound=Lûd
 
 # tickers
 
 # LocalTime
-
-# Links
-
-#actions
 
 # fennec ui
 pageAction.rightMenu=Lit rjochter balk sjen
 pageAction.mainContent=Lit haadinhâld sjen
 pageAction.leftMenu=Lit linker balk sjen
 pageAction.all=Lit alles sjen
+
+sidebarBox.actions=Aksjes
 
 # buttons
 button.save=Opslaan
@@ -420,10 +413,14 @@ button.disableAll=Alles útskeakelje
 
 
 # -----------------------------------------------------------------------------
+# option function strings
+TickerAlert.sound=Lûd
+
+#toolbar
+
 # Captions and labels of foxtrick preferences
-
-
 prefs.title=Foarkeuren
+
 
 
 # tabs in preferences page
@@ -460,9 +457,7 @@ prefs.loadSave.import=Ymportear foxtrickfoarkeuren (Foarkeuren kinne oerskreaun 
 
 
 
-
 prefs.restoreDefault.ask=Wolst echt de standertynstellings werom sette?\nFirefox moat hjirfoar herstarte wurde\!
 prefs.disableAllModules.ask=Wolst echt alle modules útskeakelje?\n
-
 
 ###EOF
