--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -480,9 +480,7 @@ HTLanguageChanged=Foxtrick detectou un troco de idioma. O idioma de Foxtrick est
 Coach=Adestrador
 CurrentSquad=Equipo actual
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Accións
+
 managerButtons.writeInGuestbook=Escribir no Libro de visitas
 copy.copyplayerad=Copiar un anuncio do xogador ao portapapeis
 copy.copied=Copiaches o anuncio deste xogador ao portapapeis
@@ -494,6 +492,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Copiar calificacións (en HT-ML)
 CopyRatings.home=Copiar calificacións locais (en HT-ML)
 CopyRatings.away=Copiar calificacións visitante (en HT-ML)
@@ -501,11 +500,10 @@ CopyRatings.copied=As calificacións copiáronse ó portapapeis.
 
 CopyYouth.trainingReport=Copiar informe de adestramento
 
+
 MatchReportFormat.kickOff=Saque inicial
 MatchReportFormat.result=Resultado
 
-
-copy.youthclub=hattrick-youthclub.org
 
 #matches
 matches.attackdefensebars=Comparación Ataque vs Defensa
@@ -557,7 +555,25 @@ flagCollectionToMap.SAmerica=América do Sur
 flagCollectionToMap.World=O mundo
 
 # SkillTable
+Switch_view=Trocar vista
+AddHomegrown=Engadir a fidelidade dos xogadores
+showTimeInClub=Mostrar tempo no club
 
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Agochar mancado
+TransferSearchResultFilters.hideInjured=Agochar lesionados
+TransferSearchResultFilters.hideSuspended=Agochar sancionados
+TransferSearchResultFilters.days=Días\:
+
+# refer to transfer search form
+minimum=Como mínimo
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Ver
+
+# SkillTable
 Nationality=Nacionalidade
 Flag=Bandeira
 Flag.abbr=Bandeira
@@ -574,22 +590,6 @@ Bookmark=Engadir a favoritos
 Bookmark.abbr=Fa
 Deadline=Data límite
 Deadline.abbr=Data límite
-
-
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Agochar mancado
-TransferSearchResultFilters.hideInjured=Agochar lesionados
-TransferSearchResultFilters.hideSuspended=Agochar sancionados
-TransferSearchResultFilters.days=Días\:
-
-# refer to transfer search form
-minimum=Como mínimo
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-
-# SkillTable
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultado prognosticado
@@ -623,9 +623,6 @@ MyMonitor.type.nt=Nacional
 # MarkAllAsRead
 MarkAllAsRead.title=Marcar todos os fíos nas conferencias como lidos
 
-# TickerAlert
-TickerAlert.enable=Habilitar
-TickerAlert.sound=Son
 
 # tickers
 ticker.type.welcome=Mensaxe de benvida
@@ -640,24 +637,13 @@ ticker.type.others=Outros
 LocalTime.hattrick=Hora Hattrick
 LocalTime.local=Hora local
 
-# Links
-
-#actions
-button.copy=Copiar
-rapidId.view=Ver
-Switch_view=Trocar vista
-Detach=Separar
-AddHomegrown=Engadir a fidelidade dos xogadores
-showTimeInClub=Mostrar tempo no club
-button.up=Arriba
-button.down=Abaixo
-api.clearCache=Limpiar caché
-
 # fennec ui
 pageAction.rightMenu=Mostrar barra á dereita
 pageAction.mainContent=Mostrar o contido principal
 pageAction.leftMenu=Amosar barra á esquerda
 pageAction.all=Amosar todos
+
+sidebarBox.actions=Accións
 
 # buttons
 button.ok=OK
@@ -672,6 +658,9 @@ button.import=Cargar
 button.restoreDefault=Recuperar opcións por defecto
 button.disableAll=Desactivar todo
 button.revokePermissions=Revocar permisos
+button.copy=Copiar
+button.up=Arriba
+button.down=Abaixo
 
 status.loading=Cargando…
 status.loading.abbr=…
@@ -686,6 +675,7 @@ oauth.link=Obter código de verificación de chpp.hattrick.org
 oauth.success=Foxtrick foi autorizado con éxito\! Por favor, recarga esta páxina para ver a información ampliada proporcionada por Foxtrick.
 
 api.serverUnavailable=Servidor non dispoñible
+api.clearCache=Limpiar caché
 
 
 foxtrick.log.header=Traza de FoxTrick
@@ -695,14 +685,20 @@ foxtrick.log.header=Traza de FoxTrick
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+TickerAlert.enable=Habilitar
+TickerAlert.sound=Son
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=activo
 status.enabled=habilitado, pero non activo en %s
 status.disabled=deshabilitado
 
+# Captions and labels of foxtrick preferences
 prefs.title=Preferencias
+
+prefs.view.by.category=Ver por categoría
 
 module.screenshot=Captura de pantalla
 module.link=Podes copiar e pegar este enlace na conferencia para dirixir aquí
@@ -770,12 +766,9 @@ about.developers=Desarrolladores
 about.translators=Tradutores
 about.designers=Diseñadores
 
-prefs.view.by.category=Ver por categoría
-
 prefs.restoreDefault.ask=Estás seguro de que queres recuperar as opcións por defecto?\nFirefox ten que reiniciarse para que isto faga efecto\!
 prefs.disableAllModules.ask=Estás seguro de querer desactivar tódolos módulos?\n
 prefs.revokePermissions.ask=Estás seguro de querer refusar todos os permisos opcionais?
-
 prefs.getPermissions.alert=%s precisa permisos para traballar. Permítelle o acceso na seguinte fiestra. Se declinas, este módulo será desactivado.
 
 ###EOF
