--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -816,9 +816,7 @@ HTLanguageChanged=Podesili ste vaše Foxtrick postavke da se automatski prilagod
 Coach=Trener
 CurrentSquad=Trenutna postava
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Dodatne Radnje
+
 managerButtons.writeInGuestbook=Upiši u knjigu gostiju
 copy.copyplayerad=Kopiraj igračev ID
 copy.copied=Igračev oglas je kopiran u međuspremnik.
@@ -830,6 +828,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Kopiraj ocjene (u HT-ML)
 CopyRatings.home=Kopiraj ocjene domaće momčadi u međuspremnik (HT-ML stil)
 CopyRatings.away=Kopiraj ocjene gostujuće momčadi u međuspremnik (HT-ML stil)
@@ -845,6 +844,14 @@ CopyYouth.fixturesSource=Kopiraj izvorni kod rasporeda
 CopyYouth.fixturesSource.copied=Izvorni kod rasporeda je kopiran.
 CopyYouth.goto=Idi na %s
 
+copy.copy.skilltable=Kopiraj tablicu s vještinama u međuspremnik (HT-ML stil)
+copy.copied.skilltable=Tablica sa vještinama kopirana je u međuspremnik.
+copy.copied.matchid=ID broj utakmice kopiran je u međuspremnik.
+copy.copied.postid=ID broj poruke kopiran je u međuspremnik.
+copy.copied.posting=Poruka kopirana je u međuspremnik.
+copy.copySelected=Kopiraj obilježeno sa ctrl + c.
+copy.operaPaste=Zalijepi sa shift + lijevi klik.
+
 MatchReportFormat.MatchReport=Izvještaj utakmice
 MatchReportFormat.lineup=Početna postava
 MatchReportFormat.kickOff=Početni udarac
@@ -854,16 +861,6 @@ MatchReportFormat.extraTime=Produžetci
 MatchReportFormat.penaltyShootOut=Izvođenje jedanaesteraca
 MatchReportFormat.result=Rezultat
 
-copy.copySelected=Kopiraj obilježeno sa ctrl + c.
-copy.operaPaste=Zalijepi sa shift + lijevi klik.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Kopiraj tablicu s vještinama u međuspremnik (HT-ML stil)
-copy.copied.skilltable=Tablica sa vještinama kopirana je u međuspremnik.
-copy.copied.matchid=ID broj utakmice kopiran je u međuspremnik.
-copy.copied.postid=ID broj poruke kopiran je u međuspremnik.
-copy.copied.posting=Poruka kopirana je u međuspremnik.
-copy.youthstatistics=Statistika jouniora ht-ys.org
 
 #matches
 matches.attackdefensebars=Prikaz 'Napad protiv Obrane'
@@ -924,7 +921,36 @@ flagCollectionToMap.World=Svijet
 
 # SkillTable
 Skill_table=Tablica vještina
+Switch_view=Promijeni pregled
+AddHomegrown=Dodaj domaće igrače
+showTimeInClub=Prikaži vrijeme u klubu
 
+team.status.booked=Prijateljska utakmica ugovorena
+ShowFriendlyBooked.ShowFriendlies=Prikaži prijateljske
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Sakrij igrače s modricama
+TransferSearchResultFilters.hideInjured=Sakrij ozlijeđene
+TransferSearchResultFilters.hideSuspended=Sakrij suspendirane
+TransferSearchResultFilters.days=Dana\:
+
+# refer to transfer search form
+minimum=Barem
+maximum=Najviše
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Pregled
+rapidId.viewById=Pregled preko ID broja
+rapidId.senior=Senior
+rapidId.youth=Junior
+rapidId.tournaments=Turniri
+rapidId.tournament=Turnir
+
+# SkillTable
+skillTable.switchView=Promijeni izgled tablice.
+skillTable.addHomegrown=Dodaje sve domaće igrače od trenutnih
+skillTable.showTimeInClub=Prikaži vrijeme od kad se igrač pridružio klupskoj seniorskoj momčadi
 Nationality=Nacionalnost
 Nationality.abbr=Nac
 Flag=Zastavica
@@ -948,34 +974,6 @@ CurrentBidder=Trenutni najbolji ponuđač
 CurrentBidder.abbr=Ponuđač
 CurrentBidderShort=Trenutni najbolji ponuđač
 CurrentBidderShort.abbr=Bd
-
-
-team.status.booked=Prijateljska utakmica ugovorena
-ShowFriendlyBooked.ShowFriendlies=Prikaži prijateljske
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Sakrij igrače s modricama
-TransferSearchResultFilters.hideInjured=Sakrij ozlijeđene
-TransferSearchResultFilters.hideSuspended=Sakrij suspendirane
-TransferSearchResultFilters.days=Dana\:
-
-# refer to transfer search form
-minimum=Barem
-maximum=Najviše
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Pregled preko ID broja
-rapidId.senior=Senior
-rapidId.youth=Junior
-rapidId.tournaments=Turniri
-rapidId.tournament=Turnir
-
-# SkillTable
-skillTable.switchView=Promijeni izgled tablice.
-skillTable.addHomegrown=Dodaje sve domaće igrače od trenutnih
-skillTable.showTimeInClub=Prikaži vrijeme od kad se igrač pridružio klupskoj seniorskoj momčadi
-foxtrick.SkillTable.detach=Odvoji
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predviđeni rezultat
@@ -1023,9 +1021,6 @@ MyMonitor.type.nt=Nacionalni
 # MarkAllAsRead
 MarkAllAsRead.title=Označi teme u svim forumima kao pročitane
 
-# TickerAlert
-TickerAlert.enable=Omogući
-TickerAlert.sound=Zvuk
 
 # tickers
 ticker.type.welcome=Poruka dobrodošlice
@@ -1044,26 +1039,13 @@ LocalTime.hattrick.title=Vrijeme u Hattrickovoj vremenskoj zoni. Kliknite da bis
 LocalTime.local=Lokalno vrijeme
 LocalTime.local.title=Vrijeme u lokalnoj vremenskoj zoni. Klikni na sat za promjeniti u Hattrickovu vremensku zonu.
 
-# Links
-Links.feeds=Izvori liste linkova (odvojeni redovima)
-
-#actions
-button.copy=Kopiraj
-rapidId.view=Pregled
-Switch_view=Promijeni pregled
-Detach=Odvoji
-AddHomegrown=Dodaj domaće igrače
-showTimeInClub=Prikaži vrijeme u klubu
-button.up=Gore
-button.down=Dolje
-api.clearCache=Počisti predmemoriju
-api.clearCache.title=Briše FoxTrickovu Xml predmemoriju. FoxTrick skida dodatne informacije s Hattrickovih servera na zahtjev. Prije nego zatvorite web preglednik, FoxTrick će koristiti lokalnu spemljenu kopiju. U rijetkim slučajevima može biti vremenski zastarjelo. Obrišite predmemoriju ako želite da FoxTrick skine opet s dodatnim informacijama.
-
 # fennec ui
 pageAction.rightMenu=Prikaži desnu traku
 pageAction.mainContent=Prikaži glavni sadržaj
 pageAction.leftMenu=Prikaži lijevu traku
 pageAction.all=Prikaži sve
+
+sidebarBox.actions=Dodatne Radnje
 
 # buttons
 button.ok=OK
@@ -1082,6 +1064,9 @@ button.restoreDefault=Vrati uobičajeno
 button.deleteToken=Obriši kod
 button.disableAll=Isključi sve
 button.revokePermissions=Opoziv dozvole
+button.copy=Kopiraj
+button.up=Gore
+button.down=Dolje
 
 status.loading=Učitavanje…
 status.loading.abbr=…
@@ -1098,6 +1083,8 @@ oauth.success=FoxTrick je uspješno autoriziran\! Molimo ponovno učitajte ovu s
 
 api.failure=Pristup podacima u Hattricku nije uspio. Morate autorizirati FoxTrick za pristup tim podacima. Ako ste to učinili, provjerite povezanost mreže ili pokušajte ponovno kasnije.
 api.serverUnavailable=Server nedostupan
+api.clearCache=Počisti predmemoriju
+api.clearCache.title=Briše FoxTrickovu Xml predmemoriju. FoxTrick skida dodatne informacije s Hattrickovih servera na zahtjev. Prije nego zatvorite web preglednik, FoxTrick će koristiti lokalnu spemljenu kopiju. U rijetkim slučajevima može biti vremenski zastarjelo. Obrišite predmemoriju ako želite da FoxTrick skine opet s dodatnim informacijama.
 
 exception.error=Greška %s
 
@@ -1108,8 +1095,12 @@ foxtrick.log.header=FoxTrick zapisi
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Izvori liste linkova (odvojeni redovima)
+TickerAlert.enable=Omogući
+TickerAlert.sound=Zvuk
 
+#toolbar
 toolbar.title=FoxTrick
 toolbar.disableTemporary=Privremeno isključi
 toolbar.featureHighlight=Označi značajke
@@ -1119,7 +1110,11 @@ status.active=aktivan
 status.enabled=omogućen, ali neaktivan na %s
 status.disabled=onemogućen
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrickove Postavke
+
+prefs.view.by.category=Pogled po kategorijama
+prefs.view.by.page=Pregled po zadnjoj HT stranici
 
 module.screenshot=Slika zaslona
 module.link=Možete kopirati i zalijepiti ovaj link na forumu za usmjeravanje ovdje
@@ -1200,14 +1195,10 @@ about.developers=Razvijatelji
 about.translators=Prevoditelji
 about.designers=Dizajneri
 
-prefs.view.by.category=Pogled po kategorijama
-prefs.view.by.page=Pregled po zadnjoj HT stranici
-
 prefs.restoreDefault.ask=Da li ste sigurni da želite vratiti uobičajena podešenja?\nFirefox je potrebno restartati\!
 prefs.deleteToken.ask=Brisanje OAuth koda za TeamID %s?
 prefs.disableAllModules.ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
 prefs.revokePermissions.ask=Jeste li sigurni da želite poništiti sve dozvole?
-
 prefs.getPermissions.alert=%s treba dozvolu za rad. Dopusti pristup u sljedećem dijaloškom okviru. Ako odbijete ova opcija će biti isključena.
 
 ###EOF
