--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -725,9 +725,7 @@ HTLanguageChanged=A FoxTrick azt érzékelte, hogy módosítottad a nyelvet. A F
 Coach=Edző
 CurrentSquad=Aktuális keret
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Műveletek
+
 managerButtons.writeInGuestbook=Írj a vendégkönyvbe
 copy.copyplayerad=A játékoshirdetés vágólapra másolása
 copy.copied=A játékoshirdetést vágólapra másoltad.
@@ -739,6 +737,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Az értékelések másolása (HT-ML-ben)
 CopyRatings.home=A hazai csapat értékeléseinek másolása (HT-ML-ben)
 CopyRatings.away=A vendégcsapat értékeléseinek másolása (HT-ML-ben)
@@ -754,6 +753,14 @@ CopyYouth.fixturesSource=Mérkőzések forrásának másolása
 CopyYouth.fixturesSource.copied=Mérkőzések forrása másolva lett.
 CopyYouth.goto=Ugrás\: %s
 
+copy.copy.skilltable=A képességek vágólapra másolása (HT-ML-ben)
+copy.copied.skilltable=A képességtáblázat forráskódját vágólapra másoltad.
+copy.copied.matchid=A mérkőzésazonosítót vágólapra másoltad.
+copy.copied.postid=A hozzászólás azonosítóját [hozzászólás\=%s] vágólapra másoltad.
+copy.copied.posting=A következő hozzászólást\: %s vágólapra másoltad.
+copy.copySelected=Kijelölés másolása\: Ctrl + C.
+copy.operaPaste=Beillesztés Shift + bal kattintás együtt.
+
 MatchReportFormat.MatchReport=Meccsriport
 MatchReportFormat.lineup=Felállás
 MatchReportFormat.kickOff=Kezdőrúgás
@@ -763,16 +770,6 @@ MatchReportFormat.extraTime=Hosszabbítás
 MatchReportFormat.penaltyShootOut=Tizenegyespárbaj
 MatchReportFormat.result=Eredmény
 
-copy.copySelected=Kijelölés másolása\: Ctrl + C.
-copy.operaPaste=Beillesztés Shift + bal kattintás együtt.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=A képességek vágólapra másolása (HT-ML-ben)
-copy.copied.skilltable=A képességtáblázat forráskódját vágólapra másoltad.
-copy.copied.matchid=A mérkőzésazonosítót vágólapra másoltad.
-copy.copied.postid=A hozzászólás azonosítóját [hozzászólás\=%s] vágólapra másoltad.
-copy.copied.posting=A következő hozzászólást\: %s vágólapra másoltad.
-copy.youthstatistics=Ifi statisztikák ht-ys.org
 
 #matches
 matches.attackdefensebars=Támadás kontra védekezés
@@ -833,7 +830,32 @@ flagCollectionToMap.World=Világ
 
 # SkillTable
 Skill_table=Képességtáblázat
+Switch_view=A nézet felcserélése
+showTimeInClub=Mutassa a klubban töltött időt
 
+team.status.booked=Barátságos meccs lekötve
+ShowFriendlyBooked.ShowFriendlies=Barátságos mérkőzések megjelenítése
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Tapaszosok elrejtése
+TransferSearchResultFilters.hideInjured=Sérültek elrejtése
+TransferSearchResultFilters.hideSuspended=Eltiltottak elrejtése
+TransferSearchResultFilters.days=Napok\:
+
+# refer to transfer search form
+minimum=Legalább
+maximum=Legfeljebb
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Megtekintés
+rapidId.viewById=Megtekintés az azonosító alapján
+rapidId.senior=Felnőtt
+rapidId.youth=Ifi
+
+# SkillTable
+skillTable.switchView=A táblázat nézetének felcserélése
+skillTable.showTimeInClub=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
 Nationality=Nemzetiség
 Nationality.abbr=Nemz.
 Flag=Zászló
@@ -857,31 +879,6 @@ CurrentBidder=A legmagasabb licit
 CurrentBidder.abbr=Maglic
 CurrentBidderShort=A legmagasabb licit
 CurrentBidderShort.abbr=Mlic
-
-
-team.status.booked=Barátságos meccs lekötve
-ShowFriendlyBooked.ShowFriendlies=Barátságos mérkőzések megjelenítése
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Tapaszosok elrejtése
-TransferSearchResultFilters.hideInjured=Sérültek elrejtése
-TransferSearchResultFilters.hideSuspended=Eltiltottak elrejtése
-TransferSearchResultFilters.days=Napok\:
-
-# refer to transfer search form
-minimum=Legalább
-maximum=Legfeljebb
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Megtekintés az azonosító alapján
-rapidId.senior=Felnőtt
-rapidId.youth=Ifi
-
-# SkillTable
-skillTable.switchView=A táblázat nézetének felcserélése
-skillTable.showTimeInClub=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
-foxtrick.SkillTable.detach=Leválasztás
 
 # HTMSPrediction
 HTMSPrediction.prediction=Becsült eredmény
@@ -927,9 +924,6 @@ MyMonitor.type.nt=Nemzeti
 # MarkAllAsRead
 MarkAllAsRead.title=Minden szál olvasottnak jelölése minden fórumban
 
-# TickerAlert
-TickerAlert.enable=Engedélyezés
-TickerAlert.sound=Hang
 
 # tickers
 ticker.type.welcome=Üdvözlő üzenet
@@ -948,24 +942,13 @@ LocalTime.hattrick.title=Idő a Hattrick idő szerint. Kattins az órára a hely
 LocalTime.local=Helyi idő
 LocalTime.local.title=Idő a helyi időzóna szerint. Kattins az órára a Hattrick időre váltáshoz.
 
-# Links
-Links.feeds=Linklisták forrása (sortörésekkel elválasztva)
-
-#actions
-button.copy=Másolás
-rapidId.view=Megtekintés
-Switch_view=A nézet felcserélése
-Detach=Leválasztás
-showTimeInClub=Mutassa a klubban töltött időt
-button.up=Fel
-button.down=Le
-api.clearCache=A gyorsítótár ürítése
-
 # fennec ui
 pageAction.rightMenu=Jobb hasáb megjelenítése
 pageAction.mainContent=Fő tartalom megjelenítése
 pageAction.leftMenu=Bal hasáb mutatása
 pageAction.all=Az összes megjelenítése
+
+sidebarBox.actions=Műveletek
 
 # buttons
 button.ok=OK
@@ -981,6 +964,9 @@ button.export=Exportálás
 button.import=Importálás
 button.restoreDefault=Alapértelmezések visszaállítása
 button.disableAll=Összes kikapcsolása
+button.copy=Másolás
+button.up=Fel
+button.down=Le
 
 status.loading=Betöltés...
 status.loading.abbr=…
@@ -996,6 +982,7 @@ oauth.link=Kérj igazoló kódot a chpp.hattrick.org oldalon
 oauth.success=A FoxTrick engedélyezése sikeres\! Töltsd be újra az oldalt, hogy lásd a Foxtrick által kínált bővebb információkat.
 
 api.failure=A Hattricken történő adathozzáférés sikertelen. Engedélyezned kell, hogy a FoxTrick hozzáférhessen a csapatod adataihoz. Ha ez már megtörtént, ellenőrizd a hálózati kapcsolatot, vagy próbáld újra.
+api.clearCache=A gyorsítótár ürítése
 
 exception.error=Hiba\: %s
 
@@ -1005,14 +992,20 @@ exception.error=Hiba\: %s
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Linklisták forrása (sortörésekkel elválasztva)
+TickerAlert.enable=Engedélyezés
+TickerAlert.sound=Hang
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=aktív
 status.enabled=be van kapcsolva, de itt nem aktív\: %s
 status.disabled=ki van kapcsolva
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick-beállítások
+
 
 module.screenshot=Képernyőfotó
 
@@ -1076,10 +1069,8 @@ about.developers=Fejlesztők
 about.translators=Fordítók
 about.designers=Tervezők
 
-
 prefs.restoreDefault.ask=Biztosan visszaállítod az alapértelmezett beállításokat?
 prefs.disableAllModules.ask=Biztosan kikapcsolod az összes modult?
-
 prefs.getPermissions.alert=A következőnek\: %s engedélyre van szüksége a működéshez. Engedélyezd a hozzáférést a következő dialógusban. Ha elutasítod, akkor ennek a modulnak a funkcionalitása le lesz tiltva.
 
 ###EOF
