--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -810,9 +810,7 @@ HTLanguageChanged=FoxTrick aptiko kalbos pakeitimą. %s – dabar Foxtrick kalba
 Coach=Treneris
 CurrentSquad=Dabartinė sudėtis
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Veiksmai
+
 managerButtons.writeInGuestbook=Rašyti į svečių knygą
 copy.copyplayerad=Kopijuoti informaciją
 copy.copied=Žaidėjo informacija nukopijuota.
@@ -824,6 +822,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Kopijuoti reitingus (HT-ML formatu)
 CopyRatings.home=Kopijuoti namų komandos reitingus (HT-ML formatu)
 CopyRatings.away=Kopijuoti svečių komandos reitingus (HT-ML formatu)
@@ -839,6 +838,14 @@ CopyYouth.fixturesSource=Nukopijuoti tvarkaraščio pirminį tekstą
 CopyYouth.fixturesSource.copied=Tvarkaraščio pirminis tekstas nukopijuotas.
 CopyYouth.goto=Eiti į %s
 
+copy.copy.skilltable=Nukopijuoti įgūdžių lentelę (HT-ML formatu)
+copy.copied.skilltable=Įgūdžių lentelė nukopijuota.
+copy.copied.matchid=Rungtynių ID nukopijuotas.
+copy.copied.postid=Žinutės ID [post\=%s] nukopijuotas.
+copy.copied.posting=Žinutė %s nukopijuota.
+copy.copySelected=Nukopijuoti pažymėtą turinį paspaudus Ctrl + C.
+copy.operaPaste=Įterpti paspaudus Shift + Kairysis pelės mygtukas.
+
 MatchReportFormat.MatchReport=Rungtynių ataskaita
 MatchReportFormat.lineup=Sudėtis
 MatchReportFormat.kickOff=Rungtynių pradžia
@@ -848,16 +855,6 @@ MatchReportFormat.extraTime=Pratęsimas
 MatchReportFormat.penaltyShootOut=Baudinių serija
 MatchReportFormat.result=Rezultatas
 
-copy.copySelected=Nukopijuoti pažymėtą turinį paspaudus Ctrl + C.
-copy.operaPaste=Įterpti paspaudus Shift + Kairysis pelės mygtukas.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Nukopijuoti įgūdžių lentelę (HT-ML formatu)
-copy.copied.skilltable=Įgūdžių lentelė nukopijuota.
-copy.copied.matchid=Rungtynių ID nukopijuotas.
-copy.copied.postid=Žinutės ID [post\=%s] nukopijuotas.
-copy.copied.posting=Žinutė %s nukopijuota.
-copy.youthstatistics=Jaunių statistika ht-ys.org
 
 #matches
 matches.attackdefensebars=Atakos ir Gynybos juostelės
@@ -918,7 +915,36 @@ flagCollectionToMap.World=Pasaulis
 
 # SkillTable
 Skill_table=Įgūdžių lentelė
+Switch_view=Pakeisti vaizdą
+AddHomegrown=Pridėti išaugintus žaidėjus
+showTimeInClub=Rodyti praleistą laiką komandoje
 
+team.status.booked=Susitarta dėl draugiškų
+ShowFriendlyBooked.ShowFriendlies=Rodyti draugiškas rungtynes
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Paslėpti susižeidusius
+TransferSearchResultFilters.hideInjured=Paslėpti traumuotus
+TransferSearchResultFilters.hideSuspended=Paslėpti suspenduotus
+TransferSearchResultFilters.days=Dienos\:
+
+# refer to transfer search form
+minimum=Bent
+maximum=Daugiausiai
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Žiūrėti
+rapidId.viewById=Žiūrėti ID
+rapidId.senior=Pagrindas
+rapidId.youth=Jauniai
+rapidId.tournaments=Turnyrai
+rapidId.tournament=Turnyras
+
+# SkillTable
+skillTable.switchView=Pakeisti lentelės vaizdą.
+skillTable.addHomegrown=Pridėti visus užaugintus žaidėjus
+skillTable.showTimeInClub=Rodyti komandoje išbūtą laiką
 Nationality=Pilietybė
 Nationality.abbr=Pil.
 Flag=Vėliava
@@ -942,34 +968,6 @@ CurrentBidder=Dabartinis pirkėjas
 CurrentBidder.abbr=Pirkėjas
 CurrentBidderShort=Dabartinis pirkėjas
 CurrentBidderShort.abbr=Prk
-
-
-team.status.booked=Susitarta dėl draugiškų
-ShowFriendlyBooked.ShowFriendlies=Rodyti draugiškas rungtynes
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Paslėpti susižeidusius
-TransferSearchResultFilters.hideInjured=Paslėpti traumuotus
-TransferSearchResultFilters.hideSuspended=Paslėpti suspenduotus
-TransferSearchResultFilters.days=Dienos\:
-
-# refer to transfer search form
-minimum=Bent
-maximum=Daugiausiai
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Žiūrėti ID
-rapidId.senior=Pagrindas
-rapidId.youth=Jauniai
-rapidId.tournaments=Turnyrai
-rapidId.tournament=Turnyras
-
-# SkillTable
-skillTable.switchView=Pakeisti lentelės vaizdą.
-skillTable.addHomegrown=Pridėti visus užaugintus žaidėjus
-skillTable.showTimeInClub=Rodyti komandoje išbūtą laiką
-foxtrick.SkillTable.detach=Atkabinti
 
 # HTMSPrediction
 HTMSPrediction.prediction=Spėjamas rezultatas
@@ -1017,9 +1015,6 @@ MyMonitor.type.nt=rinktinė
 # MarkAllAsRead
 MarkAllAsRead.title=Pažymėti visas temas visuose forumuose perskaitytomis
 
-# TickerAlert
-TickerAlert.enable=Įjungta
-TickerAlert.sound=Garsas
 
 # tickers
 ticker.type.welcome=Pasisveikinimo žinutė
@@ -1038,26 +1033,13 @@ LocalTime.hattrick.title=Laikas Hattrick laiko juostoje. Spustelėjus rodomas vi
 LocalTime.local=Vietos laikas
 LocalTime.local.title=Laikas vietos laiko juostoje. Spustelėjus rodomas Hattrick laikas.
 
-# Links
-Links.feeds=Nuorodų srautai (kiekvienas iš naujos eilutės)
-
-#actions
-button.copy=Kopijuoti
-rapidId.view=Žiūrėti
-Switch_view=Pakeisti vaizdą
-Detach=Atskirti
-AddHomegrown=Pridėti išaugintus žaidėjus
-showTimeInClub=Rodyti praleistą laiką komandoje
-button.up=Aukštyn
-button.down=Žemyn
-api.clearCache=Išvalyti podėlį
-api.clearCache.title=Išvalo FoxTrick CHPP podėlį. Esant reikalui „FoxTrick“ siunčia papildomą informaciją iš Hattrick serverių. Kol neišjungėte naršyklės, FoxTrick naudoja sukauptus duomenis. Retais atvejais tie duomenys gali būti pasenę. Išvalykite podėlį, jei norite atnaujinti duomenis.
-
 # fennec ui
 pageAction.rightMenu=Rodyti juostą dešinėje
 pageAction.mainContent=Rodyti pagrindinį turinį
 pageAction.leftMenu=Rodyti juostą kairėje
 pageAction.all=Rodyti viską
+
+sidebarBox.actions=Veiksmai
 
 # buttons
 button.ok=Gerai
@@ -1076,6 +1058,9 @@ button.restoreDefault=Atstatyti pradinius nustatymus
 button.deleteToken=Panaikinti prieigą
 button.disableAll=Išjungti viską
 button.revokePermissions=Pašalinti leidimus
+button.copy=Kopijuoti
+button.up=Aukštyn
+button.down=Žemyn
 
 status.loading=Įkeliama…
 status.loading.abbr=…
@@ -1092,6 +1077,8 @@ oauth.success=„FoxTrick“ sėkmingai autorizuotas\! Kad pamatytumėte papildo
 
 api.failure=Nepavyko iš Hattrick gauti Jūsų komandos duomenų. Turite autorizuoti „FoxTrick“, kad juos pasiektumėte. Jei tai jau esate padarę, patikrinkite interneto ryšį ar pabandykite vėliau.
 api.serverUnavailable=Serveris neatsako
+api.clearCache=Išvalyti podėlį
+api.clearCache.title=Išvalo FoxTrick CHPP podėlį. Esant reikalui „FoxTrick“ siunčia papildomą informaciją iš Hattrick serverių. Kol neišjungėte naršyklės, FoxTrick naudoja sukauptus duomenis. Retais atvejais tie duomenys gali būti pasenę. Išvalykite podėlį, jei norite atnaujinti duomenis.
 
 exception.error=Klaida %s
 
@@ -1103,14 +1090,22 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Nuorodų srautai (kiekvienas iš naujos eilutės)
+TickerAlert.enable=Įjungta
+TickerAlert.sound=Garsas
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=aktyvus
 status.enabled=įjungtas, bet neaktyvus %s
 status.disabled=išjungtas
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick nustatymai
+
+prefs.view.by.category=Rodyti funkcijų kategorijas
+prefs.view.by.page=Rodyti paskutinio HT puslapio funkcijas
 
 module.screenshot=Momentinė ekrano nuotrauka
 module.link=Galite į forumą nukopijuoti tiesiogiai čia vedančią nuorodą
@@ -1187,14 +1182,10 @@ about.developers=Programuotojai
 about.translators=Vertėjai
 about.designers=Stilistai
 
-prefs.view.by.category=Rodyti funkcijų kategorijas
-prefs.view.by.page=Rodyti paskutinio HT puslapio funkcijas
-
 prefs.restoreDefault.ask=Ar tikrai norite atstatyti pradinius nustatymus?
 prefs.deleteToken.ask=Panaikinti CHPP prieigą (komandos ID\: %s)?
 prefs.disableAllModules.ask=Ar tikrai norite išjungti visus patobulinimus?
 prefs.revokePermissions.ask=Ar tikrai norite panaikinti visus papildomus leidimus?
-
 prefs.getPermissions.alert=%s darbui reikia papildomo leidimo. Suteikite leidimą pasirodysiančiame lange.
 
 ###EOF
