--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -466,9 +466,7 @@ HTLanguageChanged=FoxTrick ir konstatējis valodas maiņu. FoxTrick valoda ir ma
 Coach=Treneris
 CurrentSquad=Pašreizējā komanda
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Darbības
+
 managerButtons.writeInGuestbook=Rakstīt viesu grāmatā
 copy.copyplayerad=Kopēt spēlētāja reklāmu
 copy.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
@@ -480,6 +478,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Kopēt sniegumu(HT-ML)
 CopyRatings.home=Kopēt mājnieku sniegumu(HT-ML)
 CopyRatings.away=Kopēt viesu sniegumu(HT-ML)
@@ -495,6 +494,14 @@ CopyYouth.fixturesSource=Kopēt spēļu kalendāra pirmkodu
 CopyYouth.fixturesSource.copied=Spēļu kalendāra pirmkods ir nokopēts.
 CopyYouth.goto=Doties uz %s
 
+copy.copy.skilltable=Kopēt prasmju tabulu starpliktuvē(HT-ML formātā)
+copy.copied.skilltable=Prasmju tabula ir iekopēta starpliktuvē.
+copy.copied.matchid=Spēles ID ir iekopēts starpliktuvē.
+copy.copied.postid=Ziņojuma ID [post\=%s] ir iekopēts starpliktuvē.
+copy.copied.posting=Ziņojums %s ir pievienots starpliktuvei.
+copy.copySelected=Kopējiet iezīmēto ar Ctrl + C.
+copy.operaPaste=Ielīmējiet ar Shift + kreisais klikšķis.
+
 MatchReportFormat.MatchReport=Spēles pārskats
 MatchReportFormat.lineup=Izkārtojums
 MatchReportFormat.kickOff=Sākums
@@ -504,16 +511,6 @@ MatchReportFormat.extraTime=Papildlaiks
 MatchReportFormat.penaltyShootOut=Pēcspēles sitieni
 MatchReportFormat.result=Rezultāts
 
-copy.copySelected=Kopējiet iezīmēto ar Ctrl + C.
-copy.operaPaste=Ielīmējiet ar Shift + kreisais klikšķis.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Kopēt prasmju tabulu starpliktuvē(HT-ML formātā)
-copy.copied.skilltable=Prasmju tabula ir iekopēta starpliktuvē.
-copy.copied.matchid=Spēles ID ir iekopēts starpliktuvē.
-copy.copied.postid=Ziņojuma ID [post\=%s] ir iekopēts starpliktuvē.
-copy.copied.posting=Ziņojums %s ir pievienots starpliktuvei.
-copy.youthstatistics=Jauniešu statistika ht-ys.org
 
 #matches
 matches.attackdefensebars=Uzbruk. pret Aizs.
@@ -573,7 +570,33 @@ flagCollectionToMap.World=Pasaule
 
 # SkillTable
 Skill_table=Prasmju tabula
+Switch_view=Mainīt skatu
+AddHomegrown=Pievienot klubā uzaugušos spēlētājus
+showTimeInClub=Parādīt klubā pavadīto laiku
 
+team.status.booked=Draudzības spēles sarunāta
+ShowFriendlyBooked.ShowFriendlies=Parādīt draudzības spēles
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Slēpt nenozīmigi savainotos
+TransferSearchResultFilters.hideInjured=Slēpt savainotos
+TransferSearchResultFilters.hideSuspended=Slēpt diskvalificētos
+TransferSearchResultFilters.days=Dienas\:
+
+# refer to transfer search form
+minimum=Vismaz
+maximum=Maksimālais
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Apskatīt
+rapidId.viewById=Atrast pēc ID
+rapidId.senior=Pieaugušo
+rapidId.youth=Jaunieši
+
+# SkillTable
+skillTable.switchView=Mainīt tabulas skatu.
+skillTable.showTimeInClub=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
 Nationality=Tautība
 Nationality.abbr=Nac.
 Flag=Karogs
@@ -594,31 +617,6 @@ CurrentBid.abbr=Solīt
 CurrentBidder=Pašreizējais augstākās summas solītājs
 CurrentBidder.abbr=Solītājs
 CurrentBidderShort=Solītājs
-
-
-team.status.booked=Draudzības spēles sarunāta
-ShowFriendlyBooked.ShowFriendlies=Parādīt draudzības spēles
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Slēpt nenozīmigi savainotos
-TransferSearchResultFilters.hideInjured=Slēpt savainotos
-TransferSearchResultFilters.hideSuspended=Slēpt diskvalificētos
-TransferSearchResultFilters.days=Dienas\:
-
-# refer to transfer search form
-minimum=Vismaz
-maximum=Maksimālais
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Atrast pēc ID
-rapidId.senior=Pieaugušo
-rapidId.youth=Jaunieši
-
-# SkillTable
-skillTable.switchView=Mainīt tabulas skatu.
-skillTable.showTimeInClub=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
-foxtrick.SkillTable.detach=Atvienot
 
 # HTMSPrediction
 HTMSPrediction.prediction=Prognozēt rezultātu
@@ -663,9 +661,6 @@ MyMonitor.type.nt=Nacionālais
 # MarkAllAsRead
 MarkAllAsRead.title=Atzīmēt tēmas visos forumos kā izlasītas
 
-# TickerAlert
-TickerAlert.enable=Iespējot
-TickerAlert.sound=Skaņa
 
 # tickers
 ticker.type.welcome=Sveiciena ziņa
@@ -684,25 +679,13 @@ LocalTime.hattrick.title=Laiks pēc Hattrick laika joslas. Klikšķiniet uz pulk
 LocalTime.local=Vietējais laiks
 LocalTime.local.title=Laiks pēc vietējās laika joslas. Klikšķiniet uz pulksteņa, lai pārslēgtos uz Hattrick laiku.
 
-# Links
-
-#actions
-button.copy=Kopēt
-rapidId.view=Apskatīt
-Switch_view=Mainīt skatu
-Detach=Atvienot
-AddHomegrown=Pievienot klubā uzaugušos spēlētājus
-showTimeInClub=Parādīt klubā pavadīto laiku
-button.up=Uz augšu
-button.down=Uz leju
-api.clearCache=Iztīrīt kešatmiņu
-api.clearCache.title=Iztukšo FoxTrick XML kešatmiņu. FoxTrick pēc pieprasījuma ielādē papildus informāciju no Hattrick serveriem. Kamēr pārlūks netiek aizvērts, Foxtrick izmano šīs informācijas lokāli saglabātās kopijas. Retos gadījumos tā var būt novecojusi. Iztukšojiet kešatmiņu, ja vēlaties, lai FoxTrick ielādē papildus informāciju no jauna.
-
 # fennec ui
 pageAction.rightMenu=Parādīts labo sānjoslu
 pageAction.mainContent=Parādīt pamatsaturu
 pageAction.leftMenu=Parādīt kreiso sānjoslu
 pageAction.all=Rādīt visus
+
+sidebarBox.actions=Darbības
 
 # buttons
 button.cancel=Atcelt
@@ -711,6 +694,9 @@ button.customize=Pielāgot
 button.save=Saglabāt
 button.add=Pievienot
 button.remove=Noņemt
+button.copy=Kopēt
+button.up=Uz augšu
+button.down=Uz leju
 
 status.loading=Ielāde…
 status.loading.abbr=…
@@ -721,6 +707,8 @@ oauth.link=Iegūt verifikācijas kodu no chpp.hattrick.org
 oauth.success=FoxTrick ir veiksmīgi autorizēts. Pārlādējiet lapu, lai redzētu vairāk FoxTrick sniegtās informācijas.
 
 api.serverUnavailable=Serveris nav pieejams
+api.clearCache=Iztīrīt kešatmiņu
+api.clearCache.title=Iztukšo FoxTrick XML kešatmiņu. FoxTrick pēc pieprasījuma ielādē papildus informāciju no Hattrick serveriem. Kamēr pārlūks netiek aizvērts, Foxtrick izmano šīs informācijas lokāli saglabātās kopijas. Retos gadījumos tā var būt novecojusi. Iztukšojiet kešatmiņu, ja vēlaties, lai FoxTrick ielādē papildus informāciju no jauna.
 
 
 # keep the following line untranslated
@@ -729,12 +717,19 @@ api.serverUnavailable=Serveris nav pieejams
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+TickerAlert.enable=Iespējot
+TickerAlert.sound=Skaņa
 
+#toolbar
 status.active=aktīvs
 status.disabled=atspējots
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick uzstādījumi
+
+prefs.view.by.category=Atlasīt pēc kategorijas
+prefs.view.by.page=Atlasīt pēc pēdējās HT lapas
 
 
 # tabs in preferences page
@@ -770,10 +765,6 @@ about.copyright=Autortiesības
 about.maintainers=Uzturētāji
 about.developers=Izstrādātāji
 about.translators=Tulkotāji
-
-prefs.view.by.category=Atlasīt pēc kategorijas
-prefs.view.by.page=Atlasīt pēc pēdējās HT lapas
-
 
 
 ###EOF
