--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -365,23 +365,21 @@ HTLanguageChanged=Во главните особини на FoxTrick имате 
 
 Coach=Тренер
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Можности
+
 managerButtons.writeInGuestbook=Напиши во книгата за гости
 copy.copyplayerad=Копирај оглас за играч во таблата за копирање (clipboard)
 copy.copied=Огласот за играчот беше копиран во таблата за копирање (clipboard)
 
 
+#copy
 CopyRatings.copied=Рејтинзите се ископирани на таблата за копирање (clipboard).
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copied.matchid=ID бројот од натпреварот е копиран на таблата за копирање (clipboard).
 copy.copied.postid=ID бројот од пораката е копиран на таблата за копирање(clipboard).
 copy.copied.posting=Текстот од пораката е копиран на таблата за копирање(clipboard).
+
+
 
 #matches
 matches.attackdefensebars=Напад против Одбрана дијаграми
@@ -434,9 +432,6 @@ flagCollectionToMap.World=Свет
 
 
 
-
-
-
 # TransferSearchResultFilters
 
 # refer to transfer search form
@@ -444,6 +439,7 @@ flagCollectionToMap.World=Свет
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+
 
 # HTMSPrediction
 
@@ -460,17 +456,14 @@ flagCollectionToMap.World=Свет
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-
 # fennec ui
+
+sidebarBox.actions=Можности
 
 # buttons
 button.save=Зачувај
@@ -490,10 +483,13 @@ button.disableAll=Исклучи сѐ
 
 
 # -----------------------------------------------------------------------------
+# option function strings
+
+#toolbar
+
 # Captions and labels of foxtrick preferences
-
-
 prefs.title=Особини
+
 
 
 # tabs in preferences page
@@ -533,9 +529,7 @@ prefs.additional.title=Дополнителни опции
 
 
 
-
 prefs.restoreDefault.ask=Дали сте сигурни дека сакате да ги обновите стандардните подесувања?\nFirefox мора да се рестартира за ова да земе ефект\!
 prefs.disableAllModules.ask=Дали сте сигурни дека сакате да ги оневозможите сите модули?\n
-
 
 ###EOF
