--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -523,26 +523,24 @@ HTLanguageChanged=Inti ssettjajt fuq il-preferenzi prinċipali ta' Foxtrick biex
 
 Coach=Kowċ
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Azzjonijiet
+
 managerButtons.writeInGuestbook=Ikteb fil-Ktieb tal-mistednin
 copy.copyplayerad=Ikkopja l-avviż tal-plejer għal fuq il-clipboard
 copy.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
 
 
+#copy
 CopyRatings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
 CopyRatings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
 CopyRatings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copy.skilltable=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
 copy.copied.matchid=L-Id tal-partita ġiet ikkopjata għal fuq il-clipboard.
 copy.copied.postid=L-ID tal-messaġġ ġie ikkopjat għal fuq il-clipboard
 copy.copied.posting=Il-messaġġ ġie ikkopjat għal fuq il-clipboard.
+
+
 
 #matches
 matches.attackdefensebars=Attakk vs Difens
@@ -594,7 +592,22 @@ flagCollectionToMap.SAmerica=Amerka t'Isfel
 flagCollectionToMap.World=Dinja
 
 # SkillTable
+Switch_view=Aqleb id-dehra
 
+
+
+# TransferSearchResultFilters
+
+# refer to transfer search form
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Ara
+rapidId.viewById=Ara skond l-ID
+rapidId.senior=Il-Kbar
+rapidId.youth=Il-Minors
+
+# SkillTable
+skillTable.switchView=Aqleb id-dehra tat-tabella.
 Flag=Bandiera
 Flag.abbr=Bandiera
 Player=Plejer
@@ -604,21 +617,6 @@ Age.abbr=Eta'
 Match=Partita
 Series=Serje
 
-
-
-
-
-# TransferSearchResultFilters
-
-# refer to transfer search form
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Ara skond l-ID
-rapidId.senior=Il-Kbar
-rapidId.youth=Il-Minors
-
-# SkillTable
-skillTable.switchView=Aqleb id-dehra tat-tabella.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Riżultat imbassar
@@ -640,19 +638,14 @@ CrossTable.table=Klassifika tal-istaġun
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-rapidId.view=Ara
-Switch_view=Aqleb id-dehra
-
 # fennec ui
+
+sidebarBox.actions=Azzjonijiet
 
 # buttons
 button.customize=Ippersonalizza
@@ -673,11 +666,14 @@ button.disableAll=Itfi kollox
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
 toolbar.title=FoxTrick
 
+# Captions and labels of foxtrick preferences
 prefs.title=Preferenzi ta' Foxtrick
+
 
 
 # tabs in preferences page
@@ -719,9 +715,7 @@ prefs.additional.HTMLDebugLog=Uri r-rapport addizzjonali debug fuq il-paġna ta'
 
 
 
-
 prefs.restoreDefault.ask=Ċert li trid terġa' ittella' s-settings default?\nFirefox irid jingħalaq u jerġa' jinfetaħ biex dan isir\!
 prefs.disableAllModules.ask=Ċert li trid titfi l-moduli kollha?\n
-
 
 ###EOF
