--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -812,9 +812,7 @@ HTLanguageChanged=In de FoxTrick instellingen heb je ingesteld staan dat de taal
 Coach=Trainer
 CurrentSquad=Huidig team
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Acties
+
 managerButtons.writeInGuestbook=Schrijf in het gastenboek
 copy.copyplayerad=Kopieer transferadvertentie voor speler naar klembord
 copy.copied=De advertentie is naar het klembord gekopieerd.
@@ -826,6 +824,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Kopieer ratings naar het klembord (HT-ML opmaak)
 CopyRatings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
 CopyRatings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
@@ -841,6 +840,14 @@ CopyYouth.fixturesSource=Kopieer wedstrijdschema.
 CopyYouth.fixturesSource.copied=Wedstrijdschema is gekopieerd.
 CopyYouth.goto=Ga naar %s
 
+copy.copy.skilltable=Kopieer tabel met vaardigheden naar het klembord (HT-ML formaat)
+copy.copied.skilltable=De tabel met vaardigheden is naar het klembord gekopieerd.
+copy.copied.matchid=Het wedstrijd-ID is naar het klembord gekopieerd.
+copy.copied.postid=Het bericht-ID [post\=%s] is naar het klembord gekopieerd.
+copy.copied.posting=Bericht %s is naar het klembord gekopieerd.
+copy.copySelected=Kopieer selectie met CTRL + C.
+copy.operaPaste=Plak met SHIFT + linker muis klik.
+
 MatchReportFormat.MatchReport=Wedstrijdverslag
 MatchReportFormat.lineup=Opstelling
 MatchReportFormat.kickOff=Beginsignaal
@@ -850,16 +857,6 @@ MatchReportFormat.extraTime=Extra tijd
 MatchReportFormat.penaltyShootOut=Penalty's
 MatchReportFormat.result=Resultaat
 
-copy.copySelected=Kopieer selectie met CTRL + C.
-copy.operaPaste=Plak met SHIFT + linker muis klik.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Kopieer tabel met vaardigheden naar het klembord (HT-ML formaat)
-copy.copied.skilltable=De tabel met vaardigheden is naar het klembord gekopieerd.
-copy.copied.matchid=Het wedstrijd-ID is naar het klembord gekopieerd.
-copy.copied.postid=Het bericht-ID [post\=%s] is naar het klembord gekopieerd.
-copy.copied.posting=Bericht %s is naar het klembord gekopieerd.
-copy.youthstatistics=Jeugd statistieken ht-ys.org
 
 #matches
 matches.attackdefensebars=Aanval vs Verdediging
@@ -920,7 +917,36 @@ flagCollectionToMap.World=Wereld
 
 # SkillTable
 Skill_table=Vaardighedentabel
+Switch_view=Wissel weergave
+AddHomegrown=Voeg eigen jeugdspelers toe
+showTimeInClub=Laat periode bij club zien
 
+team.status.booked=Vriendschappelijk wedstrijd geregeld
+ShowFriendlyBooked.ShowFriendlies=Laat vriendschappelijk zien
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Verberg pleisters
+TransferSearchResultFilters.hideInjured=Verberg blessures
+TransferSearchResultFilters.hideSuspended=Verberg schorsingen
+TransferSearchResultFilters.days=Dagen\:
+
+# refer to transfer search form
+minimum=Minstens
+maximum=Maximaal
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Bekijk
+rapidId.viewById=Zoek op ID
+rapidId.senior=Senior
+rapidId.youth=Jeugd
+rapidId.tournaments=Toernooien
+rapidId.tournament=Toernooi
+
+# SkillTable
+skillTable.switchView=Wissel de weergave van de tabel
+skillTable.addHomegrown=Voeg alle jeugdspelers toe
+skillTable.showTimeInClub=Laat de periode zien sinds de speler bij het senioren team speelt
 Nationality=Nationaliteit
 Nationality.abbr=Nat
 Flag=Vlaggetje
@@ -944,34 +970,6 @@ CurrentBidder=Huidige hoogste bieder
 CurrentBidder.abbr=Bieder
 CurrentBidderShort=Huidige hoogste bieder
 CurrentBidderShort.abbr=Bd
-
-
-team.status.booked=Vriendschappelijk wedstrijd geregeld
-ShowFriendlyBooked.ShowFriendlies=Laat vriendschappelijk zien
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Verberg pleisters
-TransferSearchResultFilters.hideInjured=Verberg blessures
-TransferSearchResultFilters.hideSuspended=Verberg schorsingen
-TransferSearchResultFilters.days=Dagen\:
-
-# refer to transfer search form
-minimum=Minstens
-maximum=Maximaal
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Zoek op ID
-rapidId.senior=Senior
-rapidId.youth=Jeugd
-rapidId.tournaments=Toernooien
-rapidId.tournament=Toernooi
-
-# SkillTable
-skillTable.switchView=Wissel de weergave van de tabel
-skillTable.addHomegrown=Voeg alle jeugdspelers toe
-skillTable.showTimeInClub=Laat de periode zien sinds de speler bij het senioren team speelt
-foxtrick.SkillTable.detach=Loskoppelen
 
 # HTMSPrediction
 HTMSPrediction.prediction=Voorspeld resultaat
@@ -1019,9 +1017,6 @@ MyMonitor.type.nt=Nationaal
 # MarkAllAsRead
 MarkAllAsRead.title=Markeer alle onderwerpen in alle fora als gelezen
 
-# TickerAlert
-TickerAlert.enable=Zet aan
-TickerAlert.sound=Geluid
 
 # tickers
 ticker.type.welcome=Welkomstbericht
@@ -1040,26 +1035,13 @@ LocalTime.hattrick.title=Tijd in Hattrick-tijdzone. Klik op de klok om te wissel
 LocalTime.local=Locale tijd
 LocalTime.local.title=Tijd in locale tijdzone. Klik op de klok om te wisselen naar Hattrick-tijdzone tijd.
 
-# Links
-Links.feeds=Feed met lijst van snelkoppelingen (gescheiden door regeleinden)
-
-#actions
-button.copy=Kopieer
-rapidId.view=Bekijk
-Switch_view=Wissel weergave
-Detach=Koppel los
-AddHomegrown=Voeg eigen jeugdspelers toe
-showTimeInClub=Laat periode bij club zien
-button.up=Omhoog
-button.down=Omlaag
-api.clearCache=Cache-geheugen leeghalen
-api.clearCache.title=Leeg Foxtrick's XML cache. FoxTrick haalt extra informatie van Hattrick's servers op verzoek. Totdat je de browser sluit, zal FoxTrick locale kopieën gebruiken. Soms kan het voorkomen dat deze niet meer up-to-date zijn. Leeg het cache-geheugen als je wilt dat FoxTrick de informatie nogmaals download.
-
 # fennec ui
 pageAction.rightMenu=Laat rechter balk zien
 pageAction.mainContent=Laat het hoofddeel van de site zien
 pageAction.leftMenu=Laat linker balk zien
 pageAction.all=Laat alles zien
+
+sidebarBox.actions=Acties
 
 # buttons
 button.ok=OK
@@ -1078,6 +1060,9 @@ button.restoreDefault=Zet standaardwaarden terug
 button.deleteToken=Verwijder token
 button.disableAll=Schakel alles uit
 button.revokePermissions=Trek permissies in
+button.copy=Kopieer
+button.up=Omhoog
+button.down=Omlaag
 
 status.loading=Laden…
 status.loading.abbr=…
@@ -1094,6 +1079,8 @@ oauth.success=FoxTrick is succesvol geauthoriseerd\! Ververs deze pagina om alle
 
 api.failure=Er is een fout opgetreden tijdens het ophalen van data van Hattrick. Je moet FoxTrick toegang verschaffen tot je team data. Als je dit al wel gedaan hebt, controleer je netwerk connectiviteit of probeer het later nog eens.
 api.serverUnavailable=Server niet beschikbaar
+api.clearCache=Cache-geheugen leeghalen
+api.clearCache.title=Leeg Foxtrick's XML cache. FoxTrick haalt extra informatie van Hattrick's servers op verzoek. Totdat je de browser sluit, zal FoxTrick locale kopieën gebruiken. Soms kan het voorkomen dat deze niet meer up-to-date zijn. Leeg het cache-geheugen als je wilt dat FoxTrick de informatie nogmaals download.
 
 exception.error=Fout %s
 
@@ -1105,14 +1092,22 @@ foxtrick.log.env=Versie %1, %2 platform, %3 taal, %4 lay-out, %5 richting
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Feed met lijst van snelkoppelingen (gescheiden door regeleinden)
+TickerAlert.enable=Zet aan
+TickerAlert.sound=Geluid
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=actief
 status.enabled=aangezet, maar niet actief op %s
 status.disabled=uitgezet
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick voorkeursinstellingen
+
+prefs.view.by.category=Laat per categorie zien
+prefs.view.by.page=Laat voor de laatste HT pagina zien
 
 module.screenshot=Screenshot
 module.link=Je kunt deze link kopieren en plakken in het forum om hier terecht te komen
@@ -1189,14 +1184,10 @@ about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
-prefs.view.by.category=Laat per categorie zien
-prefs.view.by.page=Laat voor de laatste HT pagina zien
-
 prefs.restoreDefault.ask=Weet je zeker dat je de standaardinstellingen wilt terugzetten?\nFirefox moet hiervoor opnieuw opgestart worden\!
 prefs.deleteToken.ask=Verwijder OAuth token voor teamid %s?
 prefs.disableAllModules.ask=Weet je zeker dat je alle modules wilt uitschakelen?\n
 prefs.revokePermissions.ask=Weet je zeker dat je alle permissies wilt intrekken?
-
 prefs.getPermissions.alert=%s vereist permissie om te werken. Sta toegang toe in het volgende venster.
 
 ###EOF
