--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -597,28 +597,26 @@ HTLanguageChanged=FoxTrick har oppdaga ei endring i språket. Språket har no vo
 
 Coach=Trenar
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Handlingar
+
 managerButtons.writeInGuestbook=Skriv i gjesteboka
 copy.copyplayerad=Kopier spelarannonse
 copy.copied=Spelarannonsa har vorte kopiert.
 
 
+#copy
 CopyRatings.both=Kopier ratingane (i HT-ML)
 CopyRatings.home=Kopier heimelaget sin rating (i HT-ML)
 CopyRatings.away=Kopier ratingane til bortelaget (i HT-ML)
 CopyRatings.copied=Ratingane har vorte kopiert.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copy.skilltable=Kopier ferdigheitstabell (i HT-ML)
 copy.copied.skilltable=Ferdigheitstabellen har vorte kopiert
 copy.copied.matchid=Kamp-ID har vorte kopiert.
 copy.copied.postid=Post-ID [post\=%s] har vorte kopiert.
 copy.copied.posting=Innlegget %s har vorte kopiert.
+
+
 
 #matches
 matches.attackdefensebars=Angrep vs forsvar
@@ -675,7 +673,25 @@ flagCollectionToMap.World=Verda
 
 # SkillTable
 Skill_table=Ferdigheitstabell
+Switch_view=Endre visning
 
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.days=Dagar\:
+
+# refer to transfer search form
+minimum=Minimum
+maximum=Maks
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Syn
+rapidId.viewById=Sorter av ID
+rapidId.senior=Senior
+rapidId.youth=Junior
+
+# SkillTable
+skillTable.switchView=Endre visning av tabell.
 Nationality=Nasjonalitet
 Nationality.abbr=Nasj
 Flag=Flagg
@@ -698,24 +714,6 @@ CurrentBidder.abbr=Bodgjevar
 CurrentBidderShort=Noverande høgste bodgjevar
 CurrentBidderShort.abbr=Bd
 
-
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.days=Dagar\:
-
-# refer to transfer search form
-minimum=Minimum
-maximum=Maks
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Sorter av ID
-rapidId.senior=Senior
-rapidId.youth=Junior
-
-# SkillTable
-skillTable.switchView=Endre visning av tabell.
-
 # HTMSPrediction
 HTMSPrediction.prediction=Forventa resultat
 HTMSPrediction.title=Kampanalyse av HTMS
@@ -736,20 +734,14 @@ CrossTable.table=Sesongkrysstabell
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-button.copy=Kopier
-rapidId.view=Syn
-Switch_view=Endre visning
-
 # fennec ui
+
+sidebarBox.actions=Handlingar
 
 # buttons
 button.ok=OK
@@ -762,6 +754,7 @@ button.export=Lagre
 button.import=Last inn
 button.restoreDefault=Attendestill til standard
 button.disableAll=Deaktiver alle
+button.copy=Kopier
 
 
 
@@ -773,14 +766,17 @@ button.disableAll=Deaktiver alle
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=aktivert
 status.enabled=Aktivert, men ikkje aktiv på %s
 status.disabled=Deaktivert
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick-innstillingar
+
 
 
 # tabs in preferences page
@@ -823,9 +819,7 @@ prefs.additional.HTMLDebugLog=Vis ein eigen debuggar-informasjon på Hattrick-si
 
 
 
-
 prefs.restoreDefault.ask=Ynskjer du verkeleg å attendestille Foxtrick?\nFirefox må verte starta om att for at dette skal verke\!
 prefs.disableAllModules.ask=Ynskjer du verkeleg å slå av alle modular?\n
-
 
 ###EOF
