--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -266,19 +266,17 @@ foxtrick.linkscustom.help=Hjelp
 
 Coach=Trener
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Funksjoner
+
 managerButtons.writeInGuestbook=Skriv i gjestebok
 copy.copyplayerad=Kopier spillerannonse til utklippstavlen
 copy.copied=Spilleren har blitt kopiert til utklippstavlen.
 
 
+#copy
 
 
 
 
-copy.youthclub=hattrick-youthclub.org
 
 #matches
 matches.attackdefensebars=Angrep kontra forsvar barer
@@ -323,9 +321,8 @@ flagCollectionToMap.SAmerica=Sør-Amerika
 flagCollectionToMap.World=Verden
 
 # SkillTable
-
-
-
+Switch_view=Bytte visning
+showTimeInClub=Vis tid i klubben
 
 
 
@@ -334,8 +331,10 @@ flagCollectionToMap.World=Verden
 # refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Vis
 
 # SkillTable
+
 
 # HTMSPrediction
 
@@ -352,7 +351,6 @@ flagCollectionToMap.World=Verden
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 ticker.type.welcome=Velkomstmelding
@@ -368,29 +366,23 @@ LocalTime.hattrick.title=Tid i Hattrick tidssone. Klikk klokken for å bytte til
 LocalTime.local=Lokal tid
 LocalTime.local.title=Tid i lokal tidssone. Klikk på klokken for å bytte til Hattrick tid.
 
-# Links
-
-#actions
-button.copy=Kopier
-rapidId.view=Vis
-Switch_view=Bytte visning
-Detach=Koble fra
-showTimeInClub=Vis tid i klubben
-button.up=Opp
-button.down=Ned
-api.clearCache=Tøm buffer
-
 # fennec ui
 pageAction.mainContent=Vis hovedinnhold
 pageAction.all=Vis alle
+
+sidebarBox.actions=Funksjoner
 
 # buttons
 button.save=Lagre
 button.go=gå til
 button.export=Largre
+button.copy=Kopier
+button.up=Opp
+button.down=Ned
 
 
 
+api.clearCache=Tøm buffer
 
 
 # keep the following line untranslated
@@ -399,10 +391,13 @@ button.export=Largre
 
 
 # -----------------------------------------------------------------------------
+# option function strings
+
+#toolbar
+
 # Captions and labels of foxtrick preferences
-
-
 prefs.title=Innstillinger
+
 
 
 # tabs in preferences page
@@ -412,8 +407,6 @@ tab.links=Lenker
 
 
 # NOTE - please preserve the braces, inner content will be converted to link
-
-
 
 
 
