--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -581,26 +581,24 @@ HTLanguageChanged=W opcjach Foxtricka włączyłeś wykrywanie zmian języka w H
 
 Coach=Trener
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Akcje
+
 managerButtons.writeInGuestbook=Wpisz się do Księgi Gości
 copy.copyplayerad=Kopiuj reklamę zawodnika do schowka
 copy.copied=Reklama skopiowana\!
 
 
+#copy
 CopyRatings.home=Kopiuj oceny gospodarzy do schowka (HT-BBCode)
 CopyRatings.away=Kopiuj oceny gości do schowka (HT-BBCode)
 CopyRatings.copied=Zrobione\!
 
 
-
-
-copy.youthclub=Akcje
 copy.copy.skilltable=Kopiuj umiejętności do schowka
 copy.copied.matchid=Zrobione\!
 copy.copied.postid=Post [post\=%s] został skopiowany do schowka\!
 copy.copied.posting=Postujący %s został skopiowany do schowka\!
+
+
 
 #matches
 matches.attackdefensebars=Atak vs Obrona
@@ -657,7 +655,25 @@ flagCollectionToMap.World=Świat
 
 # SkillTable
 Skill_table=Tabela umiejętności
+Switch_view=Zmień widok
 
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.days=Dni\:
+
+# refer to transfer search form
+minimum=Co najmniej
+maximum=Co najwyżej
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Zobacz
+rapidId.viewById=Szukaj wg ID
+rapidId.senior=Seniorzy
+rapidId.youth=Juniorzy
+
+# SkillTable
+skillTable.switchView=Zmienia widok tabeli
 Nationality=Narodowość
 Nationality.abbr=Nar
 Flag=Flagi
@@ -680,24 +696,6 @@ CurrentBidder.abbr=Kupujący
 CurrentBidderShort=Obecny kupujący
 CurrentBidderShort.abbr=Ku
 
-
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.days=Dni\:
-
-# refer to transfer search form
-minimum=Co najmniej
-maximum=Co najwyżej
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Szukaj wg ID
-rapidId.senior=Seniorzy
-rapidId.youth=Juniorzy
-
-# SkillTable
-skillTable.switchView=Zmienia widok tabeli
-
 # HTMSPrediction
 HTMSPrediction.prediction=Prognoza wyniku
 HTMSPrediction.title=Analiza meczu HTMS
@@ -718,20 +716,14 @@ CrossTable.table=Tabela meczów
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-button.copy=Kopiuj
-rapidId.view=Zobacz
-Switch_view=Zmień widok
-
 # fennec ui
+
+sidebarBox.actions=Akcje
 
 # buttons
 button.ok=OK
@@ -744,6 +736,7 @@ button.export=Eksportuj
 button.import=Importuj
 button.restoreDefault=Przywróć
 button.disableAll=Wyłącz
+button.copy=Kopiuj
 
 
 
@@ -755,14 +748,17 @@ button.disableAll=Wyłącz
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=aktywny
 status.enabled=aktywny, ale wyłączony na %s
 status.disabled=nieaktywny
 
+# Captions and labels of foxtrick preferences
 prefs.title=Ustawienia FoxTrick'a
+
 
 
 # tabs in preferences page
@@ -805,9 +801,7 @@ prefs.additional.HTMLDebugLog=Pokazuj debug na stronie Hattricka (dla twórców)
 
 
 
-
 prefs.restoreDefault.ask=Czy na pewno chcesz przywrócić domyślne ustawienia FoxTricka?\nJeśli tak, zrestartuj później Firefoxa\!
 prefs.disableAllModules.ask=Czy na pewno chcesz wyłączyć wszystkie moduły?\n
-
 
 ###EOF
