--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -522,9 +522,7 @@ foxtrick.modules_allpages=Módulos em execução em todas as páginas
 Coach=Técnico
 CurrentSquad=Elenco atual
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Ações
+
 managerButtons.writeInGuestbook=Escrever no Livro de Visitas
 copy.copyplayerad=Copiar anuncio de jogador para a area de transferencia
 copy.copied=O Jogador anunciado foi copiado para o Area de tranferencia
@@ -536,6 +534,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Copiar notas (em HT-ML)
 CopyRatings.home=Copiar notas em casa (HT-ML)
 CopyRatings.away=Copiar notas fora (HT-ML)
@@ -550,6 +549,11 @@ CopyYouth.fixturesSource=Copiar fonte de jogos
 CopyYouth.fixturesSource.copied=Fonte de jogos foi copiado.
 CopyYouth.goto=Vá para %s
 
+copy.copy.skilltable=Copiar tabela de habilidades para a área de transferência (em HT-ML)
+copy.copied.skilltable=A tabela de habilidades foi copiada para a área de transferência.
+copy.copySelected=Copiar seleção com Ctrl + C.
+copy.operaPaste=Colar com Shift + clique esquerdo.
+
 MatchReportFormat.MatchReport=Relatório do jogo
 MatchReportFormat.lineup=Escalação
 MatchReportFormat.halfTime=Meio tempo
@@ -557,13 +561,6 @@ MatchReportFormat.fullTime=Tempo integral
 MatchReportFormat.extraTime=Prorrogação
 MatchReportFormat.result=Resultado
 
-copy.copySelected=Copiar seleção com Ctrl + C.
-copy.operaPaste=Colar com Shift + clique esquerdo.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Copiar tabela de habilidades para a área de transferência (em HT-ML)
-copy.copied.skilltable=A tabela de habilidades foi copiada para a área de transferência.
-copy.youthstatistics=Estatísticas juniores ht-ys.org
 
 #matches
 matches.attackdefensebars=Barras Ataque vs Defesa
@@ -624,7 +621,34 @@ flagCollectionToMap.World=Mundo
 
 # SkillTable
 Skill_table=Tabela de habilidade
+Switch_view=Alternar o modo de exibição
+AddHomegrown=Adicionar jogadores da casa
+showTimeInClub=Mostrar hora no clube
 
+team.status.booked=Amistoso marcado
+ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Ocultar lesionados mas jogando
+TransferSearchResultFilters.hideInjured=Ocultar lesionados
+TransferSearchResultFilters.hideSuspended=Ocultar suspenso
+TransferSearchResultFilters.days=Dias\:
+
+# refer to transfer search form
+minimum=Pelo menos
+maximum=Máximo
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Modo de exibição
+rapidId.viewById=Modo de exibição por ID
+rapidId.senior=Senior
+rapidId.youth=Junior
+
+# SkillTable
+skillTable.switchView=Alternar a exibição da tabela.
+skillTable.addHomegrown=Adicionar todos os jogadores vindos dos juniores da casa do time atual
+skillTable.showTimeInClub=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
 Nationality=Nacionalidade
 Flag=Bandeira
 Flag.abbr=Bandeira
@@ -644,31 +668,6 @@ CurrentBid.abbr=Lance
 CurrentBidder=Ofertante com maior lance atual
 CurrentBidder.abbr=Ofertante
 CurrentBidderShort=Ofertante com maior lance atual
-
-
-team.status.booked=Amistoso marcado
-ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Ocultar lesionados mas jogando
-TransferSearchResultFilters.hideInjured=Ocultar lesionados
-TransferSearchResultFilters.hideSuspended=Ocultar suspenso
-TransferSearchResultFilters.days=Dias\:
-
-# refer to transfer search form
-minimum=Pelo menos
-maximum=Máximo
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Modo de exibição por ID
-rapidId.senior=Senior
-rapidId.youth=Junior
-
-# SkillTable
-skillTable.switchView=Alternar a exibição da tabela.
-skillTable.addHomegrown=Adicionar todos os jogadores vindos dos juniores da casa do time atual
-skillTable.showTimeInClub=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultado previsto
@@ -707,9 +706,6 @@ MyMonitor.type.nt=Nacional
 # MarkAllAsRead
 MarkAllAsRead.title=Marcar todos posts dos fóruns como lidos
 
-# TickerAlert
-TickerAlert.enable=Habilitado
-TickerAlert.sound=Música
 
 # tickers
 ticker.type.welcome=Mensagem de boas vindas
@@ -728,25 +724,13 @@ LocalTime.hattrick.title=Hora no fuso horário do Hattrick. Clique em relógio p
 LocalTime.local=Horário local
 LocalTime.local.title=Horário no fuso horário local. Clique no relógio para alternar para o horário do Hattrick.
 
-# Links
-Links.feeds=Feeds de listas de links (separadas por quebras de linha)
-
-#actions
-button.copy=Copiar
-rapidId.view=Modo de exibição
-Switch_view=Alternar o modo de exibição
-Detach=Separar
-AddHomegrown=Adicionar jogadores da casa
-showTimeInClub=Mostrar hora no clube
-button.up=Acima
-button.down=Para baixo
-api.clearCache=Limpar cache
-
 # fennec ui
 pageAction.rightMenu=Mostrar barra direita
 pageAction.mainContent=Mostrar conteúdo principal
 pageAction.leftMenu=Mostrar barra esquerda
 pageAction.all=Mostrar tudo
+
+sidebarBox.actions=Ações
 
 # buttons
 button.ok=OK
@@ -764,6 +748,9 @@ button.import=Carregar
 button.restoreDefault=apagar tudo
 button.deleteToken=Excluir token
 button.revokePermissions=Revogar permissões
+button.copy=Copiar
+button.up=Acima
+button.down=Para baixo
 
 status.loading=Carregando…
 status.loading.abbr=…
@@ -780,6 +767,7 @@ oauth.success=FoxTrick foi autorizado com sucesso\! Por favor, recarregar esta p
 
 api.failure=Acesso a dados Hattrick falhou. Você precisará autorizar FoxTrick para acessar seus dados de equipe. Se você tiver feito isso, verifique a conectividade de rede ou tente novamente mais tarde.
 api.serverUnavailable=Servidor indisponível
+api.clearCache=Limpar cache
 
 exception.error=Erro %s
 
@@ -790,14 +778,22 @@ foxtrick.log.header=Registro de FoxTrick
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Feeds de listas de links (separadas por quebras de linha)
+TickerAlert.enable=Habilitado
+TickerAlert.sound=Música
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=ativo
 status.enabled=habilitado, mas não ativo em %s
 status.disabled=desativado
 
+# Captions and labels of foxtrick preferences
 prefs.title=Preferencias
+
+prefs.view.by.category=Exibir por categoria
+prefs.view.by.page=Exibir pela última página HT
 
 module.screenshot=Screenshot
 
@@ -849,13 +845,9 @@ about.developers=Desenvolvedores
 about.translators=Tradutores
 about.designers=Designers
 
-prefs.view.by.category=Exibir por categoria
-prefs.view.by.page=Exibir pela última página HT
-
 prefs.restoreDefault.ask=Voce tem certeza que quer apagar todas as configurações?\nFirefox precisa ser reiniciado antes\!
 prefs.deleteToken.ask=Excluir OAuth token/segredo para teamid %s? 
 prefs.disableAllModules.ask=Tem certeza de que deseja desativar todos os módulos?
 prefs.revokePermissions.ask=Tem a certeza de que deseja revogar todas as permissões opcionais?
-
 
 ###EOF
