--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -524,27 +524,25 @@ HTLanguageChanged=Nastavil si v nastaveniach foxtricku aby sa jazyk foxtricku au
 
 Coach=Tréner
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Majiteľove kroky
+
 managerButtons.writeInGuestbook=Zobraz knihu návštev
 copy.copyplayerad=Kopírovať vlastnosti hráča do schránky
 copy.copied=Informácie o hráčovi boli vložené do schránky.
 
 
+#copy
 CopyRatings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
 CopyRatings.away=Skopírovať ratingy hosťujúceho tímu (v HT-ML formáte)
 CopyRatings.copied=Ratingy boli skopírované do schránky.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copy.skilltable=Skopírovať tabuľku so skillmi do schránky (v HT-ML formáte)
 copy.copied.skilltable=Kód tabuľky so skillmi bol skopírovaný do schránky.
 copy.copied.matchid=ID zápasu bolo skopírované do schránky.
 copy.copied.postid=ID príspevku bolo skopírované do schránky.
 copy.copied.posting=Príspevok bol skopírovaný do schránky.
+
+
 
 #matches
 matches.attackdefensebars=Grafy útokov a obran
@@ -597,7 +595,22 @@ flagCollectionToMap.World=Svet
 
 # SkillTable
 Skill_table=Tabuľka skillov
+Switch_view=Zmeniť pohľad
 
+
+
+# TransferSearchResultFilters
+
+# refer to transfer search form
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Pozrieť
+rapidId.viewById=Zobraziť podľa ID
+rapidId.senior=Seniorský
+rapidId.youth=dorastenecký
+
+# SkillTable
+skillTable.switchView=Prehodiť zobrazenie tabuľky.
 Nationality=Národnosť
 Nationality.abbr=Nár
 Flag=Vlajka
@@ -609,21 +622,6 @@ Age.abbr=Vek
 Match=Zápas
 Series=Liga
 
-
-
-
-
-# TransferSearchResultFilters
-
-# refer to transfer search form
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Zobraziť podľa ID
-rapidId.senior=Seniorský
-rapidId.youth=dorastenecký
-
-# SkillTable
-skillTable.switchView=Prehodiť zobrazenie tabuľky.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predpovedaný výsledok
@@ -645,20 +643,14 @@ CrossTable.table=Sezónna cross tabuľka
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-button.copy=Kopírovať
-rapidId.view=Pozrieť
-Switch_view=Zmeniť pohľad
-
 # fennec ui
+
+sidebarBox.actions=Majiteľove kroky
 
 # buttons
 button.customize=Prispôsobiť
@@ -668,6 +660,7 @@ button.export=Uložiť
 button.import=Nahrať
 button.restoreDefault=Obnoviť predvolené
 button.disableAll=Zablokovať všetko
+button.copy=Kopírovať
 
 
 
@@ -679,11 +672,14 @@ button.disableAll=Zablokovať všetko
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
 toolbar.title=FoxTrick
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick nastavenia
+
 
 
 # tabs in preferences page
@@ -725,9 +721,7 @@ prefs.additional.HTMLDebugLog=Zobraziť dodatočné ladiace výstupy v pätičke
 
 
 
-
 prefs.restoreDefault.ask=Určite chceš obnoviť pôvodné nastavenia Foxtricku?\nPre obnovenie musíš reštartovať Firefox\!
 prefs.disableAllModules.ask=Si si istý, že chceš zablokovať všetky moduly?\n
-
 
 ###EOF
