--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -545,9 +545,7 @@ HTLanguageChanged=FoxTrick je zaznal spremembo jezika. Jezik FoxTricka je sedaj 
 Coach=Trener
 CurrentSquad=Trenutna ekipa
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Dejanja
+
 managerButtons.writeInGuestbook=Piši v knjigo gostov
 
 ratings.HatStats=HatStats
@@ -557,6 +555,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Kopiraj ocene (v HT-ML)
 CopyRatings.home=Kopiraj domače ocene (v HT-ML)
 CopyRatings.away=Kopiraj gostujoče ocene (v HT-ML)
@@ -570,6 +569,9 @@ CopyYouth.playerSource=Kopiraj igralčevo izvorno kodo
 CopyYouth.playerSource.copied=Igralčeva izvorna koda je bila kopirana.
 CopyYouth.goto=Pojdi na %s
 
+copy.copySelected=Kopirajte izbor s Ctrl + C.
+copy.operaPaste=Prilepite s Shift + levi klik.
+
 MatchReportFormat.MatchReport=Poročilo tekme
 MatchReportFormat.lineup=Postavitev 
 MatchReportFormat.kickOff=Začetek tekme
@@ -579,11 +581,6 @@ MatchReportFormat.extraTime=Podaljški
 MatchReportFormat.penaltyShootOut=Izvajanje kazenskih strelov
 MatchReportFormat.result=Rezultat
 
-copy.copySelected=Kopirajte izbor s Ctrl + C.
-copy.operaPaste=Prilepite s Shift + levi klik.
-
-copy.youthclub=hattrick-youthclub.org
-copy.youthstatistics=Mladinska statistika ht-ys.org
 
 #matches
 matches.attackdefensebars=Napad proti obrambi
@@ -644,7 +641,33 @@ flagCollectionToMap.World=Svet
 
 # SkillTable
 Skill_table=Tabela sposobnosti
+Switch_view=Preklopi pogled
+AddHomegrown=Dodaj doma vzgojene igralce
+showTimeInClub=Pokaži čas v klubu
 
+team.status.booked=Prijateljska tekma organizirana
+ShowFriendlyBooked.ShowFriendlies=Pokaži prijateljske tekme
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Skrij obtolčene
+TransferSearchResultFilters.hideInjured=Skrij poškodovane
+TransferSearchResultFilters.hideSuspended=Skrij suspendirane
+TransferSearchResultFilters.days=Dni\:
+
+# refer to transfer search form
+minimum=Najmanj
+maximum=Največ
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Pogled
+rapidId.viewById=Pogled po ID-ju
+rapidId.tournaments=Turnirji
+rapidId.tournament=Turnir
+
+# SkillTable
+skillTable.switchView=Preklopi pogled tabele.
+skillTable.showTimeInClub=Pokaže čas, od katerega je igralec v članski ekipi
 Nationality=Nacionalnost
 Nationality.abbr=Nat
 Flag=Zastavica
@@ -667,31 +690,6 @@ CurrentBid.abbr=Ponudba
 CurrentBidder=Trenutno najvišji ponudnik
 CurrentBidder.abbr=Ponudnik
 CurrentBidderShort=Trenutno najvišji ponudnik
-
-
-team.status.booked=Prijateljska tekma organizirana
-ShowFriendlyBooked.ShowFriendlies=Pokaži prijateljske tekme
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Skrij obtolčene
-TransferSearchResultFilters.hideInjured=Skrij poškodovane
-TransferSearchResultFilters.hideSuspended=Skrij suspendirane
-TransferSearchResultFilters.days=Dni\:
-
-# refer to transfer search form
-minimum=Najmanj
-maximum=Največ
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Pogled po ID-ju
-rapidId.tournaments=Turnirji
-rapidId.tournament=Turnir
-
-# SkillTable
-skillTable.switchView=Preklopi pogled tabele.
-skillTable.showTimeInClub=Pokaže čas, od katerega je igralec v članski ekipi
-foxtrick.SkillTable.detach=Odpni
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predviden rezultat
@@ -733,9 +731,6 @@ MyMonitor.type.nt=Nacionalni
 # MarkAllAsRead
 MarkAllAsRead.title=Označi nitke v vseh forumih za prebrane
 
-# TickerAlert
-TickerAlert.enable=Omogoči
-TickerAlert.sound=Zvok
 
 # tickers
 ticker.type.welcome=Pozdravno sporočilo
@@ -754,24 +749,13 @@ LocalTime.hattrick.title=Ura v Hattrickovem časovnem pasu. Kliknite na uro za s
 LocalTime.local=Lokalni čas
 LocalTime.local.title=Ura v lokalnem časovnem pasu. Kliknite na uro za spremembo na Hattrickov časovni pas.
 
-# Links
-
-#actions
-button.copy=Kopiraj
-rapidId.view=Pogled
-Switch_view=Preklopi pogled
-Detach=Odpni
-AddHomegrown=Dodaj doma vzgojene igralce
-showTimeInClub=Pokaži čas v klubu
-button.up=Gor
-button.down=Dol
-api.clearCache=Počisti predpomnilnik
-
 # fennec ui
 pageAction.rightMenu=Pokaži desno vrstico
 pageAction.mainContent=Pokaži glavno vsebino
 pageAction.leftMenu=Pokaži levo vrstico
 pageAction.all=Pokaži vse
+
+sidebarBox.actions=Dejanja
 
 # buttons
 button.ok=V redu
@@ -789,6 +773,9 @@ button.restoreDefault=Obnovi privzeto
 button.deleteToken=Izbriši žeton
 button.disableAll=Onemogoči vse
 button.revokePermissions=Prekliči dovoljenja
+button.copy=Kopiraj
+button.up=Gor
+button.down=Dol
 
 status.loading=Nalaganje …
 status.loading.abbr=…
@@ -803,6 +790,7 @@ oauth.link=Pridobi potrditveno kodo iz chpp.hattrick.org
 oauth.success=FoxTrick je bil uspešno pooblaščen\! Prosimo, osvežite stran, da si ogledate obsežnejše informacije o FoxTricku.
 
 api.serverUnavailable=Strežnik ni na voljo
+api.clearCache=Počisti predpomnilnik
 
 exception.error=Napaka %s
 
@@ -813,14 +801,20 @@ foxtrick.log.header=FoxTrick dnevnik
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+TickerAlert.enable=Omogoči
+TickerAlert.sound=Zvok
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=aktivno
 status.enabled=omogočeno, ampak ni aktivno na %s
 status.disabled=onemogočeno
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick nastavitve
+
+prefs.view.by.category=Pogled po kategorijah
 
 
 # tabs in preferences page
@@ -882,11 +876,8 @@ about.developers=Razvijalci
 about.translators=Prevajalci
 about.designers=Oblikovalci
 
-prefs.view.by.category=Pogled po kategorijah
-
 prefs.restoreDefault.ask=Ali ste prepričani, da želite obnoviti privzete nastavitve?
 prefs.disableAllModules.ask=Ali ste prepričani, da želite onemogočiti vse module?
 prefs.revokePermissions.ask=Ali ste prepričani, da želite preklicati vsa neobvezna dovoljenja?
-
 
 ###EOF
