--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -781,9 +781,7 @@ HTLanguageChanged=Du har satt att ditt FoxTrick-språk automatiskt anpassas efte
 Coach=Tränare
 CurrentSquad=Aktuell
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Handlingar
+
 managerButtons.writeInGuestbook=Skriv i gästbok
 copy.copyplayerad=Kopiera som spelarannons till urklipp.
 copy.copied=Spelarannons har kopierats till urklipp.
@@ -795,6 +793,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Kopiera betyg (HT-ML)
 CopyRatings.home=Kopiera hemmalagets betyg till urklipp (HT-ML)
 CopyRatings.away=Kopiera bortalagets betyg till urklipp (HT-ML)
@@ -810,6 +809,14 @@ CopyYouth.fixturesSource=Kopiera källkoden för spelschemat
 CopyYouth.fixturesSource.copied=Spelschemats källkod har kopierats till urklipp.
 CopyYouth.goto=Gå till %s
 
+copy.copy.skilltable=Kopiera förmågetabell(SkillTable) till urklipp (HT-ML).
+copy.copied.skilltable=Tabellen har kopierats till urklipp.
+copy.copied.matchid=MatchID har kopierats till urklipp.
+copy.copied.postid=PostD [post\=%s] har kopierats till urklipp.
+copy.copied.posting=Post %s har kopierats till urklipp.
+copy.copySelected=Kopiera markering med Ctrl + C.
+copy.operaPaste=Klistra in med Shift + vänsterklick.
+
 MatchReportFormat.MatchReport=Matchrapport
 MatchReportFormat.lineup=Laguppställning
 MatchReportFormat.kickOff=Avspark
@@ -819,16 +826,6 @@ MatchReportFormat.extraTime=Förlängning
 MatchReportFormat.penaltyShootOut=Straffläggning
 MatchReportFormat.result=Resultat
 
-copy.copySelected=Kopiera markering med Ctrl + C.
-copy.operaPaste=Klistra in med Shift + vänsterklick.
-
-copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Kopiera förmågetabell(SkillTable) till urklipp (HT-ML).
-copy.copied.skilltable=Tabellen har kopierats till urklipp.
-copy.copied.matchid=MatchID har kopierats till urklipp.
-copy.copied.postid=PostD [post\=%s] har kopierats till urklipp.
-copy.copied.posting=Post %s har kopierats till urklipp.
-copy.youthstatistics=Juniorstatistik ht-ys.org
 
 #matches
 matches.attackdefensebars=Anfall vs Försvar staplar
@@ -889,7 +886,34 @@ flagCollectionToMap.World=Världen
 
 # SkillTable
 Skill_table=Förmågetabell
+Switch_view=Växla vy
+AddHomegrown=Add homegrown players
+showTimeInClub=Visa tid i klubben
 
+team.status.booked=Träningsmatch bokad
+ShowFriendlyBooked.ShowFriendlies=Visa träningsmatcher
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Dölj plåstrade
+TransferSearchResultFilters.hideInjured=Dölj skadade
+TransferSearchResultFilters.hideSuspended=Dölj avstängda
+TransferSearchResultFilters.days=Dagar\:
+
+# refer to transfer search form
+minimum=Min
+maximum=Max
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=View
+rapidId.viewById=Visa efter ID
+rapidId.senior=Senior
+rapidId.youth=Junior
+
+# SkillTable
+skillTable.switchView=Växla vy
+skillTable.addHomegrown=Adds all homegrown players from the current
+skillTable.showTimeInClub=Visar tiden sedan spelaren gick med i klubbens seniorlag
 Nationality=Nationalitet
 Nationality.abbr=Nat
 Flag=Flagga
@@ -913,32 +937,6 @@ CurrentBidder=Nuvarande högstbjudande
 CurrentBidder.abbr=Bidder
 CurrentBidderShort=Nuvarande högstbjudande
 CurrentBidderShort.abbr=Bd
-
-
-team.status.booked=Träningsmatch bokad
-ShowFriendlyBooked.ShowFriendlies=Visa träningsmatcher
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Dölj plåstrade
-TransferSearchResultFilters.hideInjured=Dölj skadade
-TransferSearchResultFilters.hideSuspended=Dölj avstängda
-TransferSearchResultFilters.days=Dagar\:
-
-# refer to transfer search form
-minimum=Min
-maximum=Max
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Visa efter ID
-rapidId.senior=Senior
-rapidId.youth=Junior
-
-# SkillTable
-skillTable.switchView=Växla vy
-skillTable.addHomegrown=Adds all homegrown players from the current
-skillTable.showTimeInClub=Visar tiden sedan spelaren gick med i klubbens seniorlag
-foxtrick.SkillTable.detach=Lösgör
 
 # HTMSPrediction
 HTMSPrediction.prediction=Förutspått resultat
@@ -986,9 +984,6 @@ MyMonitor.type.nt=Landslag
 # MarkAllAsRead
 MarkAllAsRead.title=Markera trådar i alla forum som lästa
 
-# TickerAlert
-TickerAlert.enable=Aktivera
-TickerAlert.sound=Ljud
 
 # tickers
 ticker.type.welcome=Välkomstmeddelande
@@ -1007,26 +1002,13 @@ LocalTime.hattrick.title=Tid i Hattricks tidszon. Klicka på klockan för att sk
 LocalTime.local=Lokal tid
 LocalTime.local.title=Tid i din egen tidszon. Klicka på klockan för att skifta till Hattricktid.
 
-# Links
-Links.feeds=Flöden av länklistor (separerade med radbrytningar)
-
-#actions
-button.copy=Kopiera
-rapidId.view=View
-Switch_view=Växla vy
-Detach=Lösgör
-AddHomegrown=Add homegrown players
-showTimeInClub=Visa tid i klubben
-button.up=Upp
-button.down=Ner
-api.clearCache=Rensa cache
-api.clearCache.title=Rensar FoxTricks Xml cache. FoxTrick laddar ner extrainformation from Hattrick's servrar på efterfrågan. Tills du stänger din browser, kommer FoxTrick att använda lokalt lagrade kopior of denna data. I sällsynta fall kan de bli utdaterade. Rensa cachen om du vill att FoxTrick skall ladda ner denna extrainformation igen.
-
 # fennec ui
 pageAction.rightMenu=Visa högra fältet
 pageAction.mainContent=Visa huvudinnehåll
 pageAction.leftMenu=Visa vänstra fältet
 pageAction.all=Visa allt
+
+sidebarBox.actions=Handlingar
 
 # buttons
 button.ok=OK
@@ -1045,6 +1027,9 @@ button.restoreDefault=Återställ standard
 button.deleteToken=Radera poletten (token)
 button.disableAll=Inaktivera alla
 button.revokePermissions=Upphäv behörigheter
+button.copy=Kopiera
+button.up=Upp
+button.down=Ner
 
 status.loading=Laddar…
 status.error=Error
@@ -1060,6 +1045,8 @@ oauth.success=Auktorisering av FoxTrick har lyckats\! Var vänlig ladda om denna
 
 api.failure=Datatillgång till Hattrick misslyckades. Du måste auktorisera FoxTrick att få tillgång till ditt lags data. Om du har gjort det, kontrollera din nätverksanslutning eller försök igen senare.
 api.serverUnavailable=Servern otillgänglig
+api.clearCache=Rensa cache
+api.clearCache.title=Rensar FoxTricks Xml cache. FoxTrick laddar ner extrainformation from Hattrick's servrar på efterfrågan. Tills du stänger din browser, kommer FoxTrick att använda lokalt lagrade kopior of denna data. I sällsynta fall kan de bli utdaterade. Rensa cachen om du vill att FoxTrick skall ladda ner denna extrainformation igen.
 
 exception.error=Error %s
 
@@ -1071,14 +1058,22 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Flöden av länklistor (separerade med radbrytningar)
+TickerAlert.enable=Aktivera
+TickerAlert.sound=Ljud
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=aktiv
 status.enabled=aktiverad, men ej aktiv på %s
 status.disabled=inaktiverad
 
+# Captions and labels of foxtrick preferences
 prefs.title=FoxTrick Inställningar
+
+prefs.view.by.category=Kategori
+prefs.view.by.page=Senaste hattricksida
 
 module.screenshot=Skärmdump
 
@@ -1153,13 +1148,9 @@ about.developers=Utvecklare
 about.translators=Översättare
 about.designers=Designers
 
-prefs.view.by.category=Kategori
-prefs.view.by.page=Senaste hattricksida
-
 prefs.restoreDefault.ask=Är du säker på att du vill återställa till standardinställningarna?
 prefs.deleteToken.ask=Radera OAuth poletten/hemlig för lagID %s? 
 prefs.disableAllModules.ask=Är du säker på att du vill inaktivera samtliga moduler?
-
 prefs.getPermissions.alert=%s behöver behörighet för att fungera. Tillåt åtkomst i följande dialogruta.
 
 ###EOF
