--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -809,9 +809,7 @@ HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idiom
 Coach=Entrenador
 CurrentSquad=Club Actual
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Acciones
+
 managerButtons.writeInGuestbook=Escribir en el Libro de Visitas
 copy.copyplayerad=Copiar anuncio de jugador al portapapeles
 copy.copied=El anuncio del jugador ha sido copiado al portapapeles
@@ -823,6 +821,7 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
+#copy
 CopyRatings.both=Copiar las calificaciones (código HT-ML)
 CopyRatings.home=Copiar las calificaciones del equipo local (código HT-ML)
 CopyRatings.away=Copiar las calificaciones del equipo visitante (código HT-ML)
@@ -838,6 +837,14 @@ CopyYouth.fixturesSource=Copiar el código de la clasificación
 CopyYouth.fixturesSource.copied=El código de la clasificación ha sido copiado
 CopyYouth.goto=Ir a %s
 
+copy.copy.skilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
+copy.copied.skilltable=El código de la tabla de habilidades ha sido copiada al portapapeles
+copy.copied.matchid=El ID del partido ha sido copiado al portapapeles.
+copy.copied.postid=El ID del mensaje [post\=%s] ha sido copiado al portapapeles.
+copy.copied.posting=El mensaje %s ha sido copiado al portapapeles.
+copy.copySelected=Copiar selección con Ctrl + C.
+copy.operaPaste=Pegar selección con Shift + Clic izquierdo.
+
 MatchReportFormat.MatchReport=Reporte del partido
 MatchReportFormat.lineup=Alineación
 MatchReportFormat.kickOff=Patada inicial
@@ -847,16 +854,6 @@ MatchReportFormat.extraTime=Tiempo extra
 MatchReportFormat.penaltyShootOut=Tanda de penales
 MatchReportFormat.result=Resultado
 
-copy.copySelected=Copiar selección con Ctrl + C.
-copy.operaPaste=Pegar selección con Shift + Clic izquierdo.
-
-copy.youthclub=Hattrick-youthclub.org
-copy.copy.skilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
-copy.copied.skilltable=El código de la tabla de habilidades ha sido copiada al portapapeles
-copy.copied.matchid=El ID del partido ha sido copiado al portapapeles.
-copy.copied.postid=El ID del mensaje [post\=%s] ha sido copiado al portapapeles.
-copy.copied.posting=El mensaje %s ha sido copiado al portapapeles.
-copy.youthstatistics=Estadísticas juveniles ht-ys.org
 
 #matches
 matches.attackdefensebars=Comparación Ataque vs Defensa
@@ -917,7 +914,36 @@ flagCollectionToMap.World=Mundo
 
 # SkillTable
 Skill_table=Tabla de Habilidades
+Switch_view=Cambiar vista
+AddHomegrown=Añadir canterano
+showTimeInClub=Mostrar tiempo en el club
 
+team.status.booked=Amistoso pactado
+ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
+
+
+# TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Esconder lastimado
+TransferSearchResultFilters.hideInjured=Esconder lesionado
+TransferSearchResultFilters.hideSuspended=Esconder suspendido
+TransferSearchResultFilters.days=Días\:
+
+# refer to transfer search form
+minimum=Mínimo
+maximum=Máximo
+
+# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+rapidId.view=Vista
+rapidId.viewById=Vista por ID
+rapidId.senior=Mayor
+rapidId.youth=Juvenil
+rapidId.tournaments=Torneos
+rapidId.tournament=Torneo
+
+# SkillTable
+skillTable.switchView=Cambiar la vista de la tabla
+skillTable.addHomegrown=Añadir a todos los canterandos del equipo actual
+skillTable.showTimeInClub=Mostrar el tiempo desde que el jugador se unió al equipo mayor
 Nationality=Nacionalidad
 Nationality.abbr=Nac
 Flag=Bandera
@@ -941,34 +967,6 @@ CurrentBidder=Mánager con oferta más alta
 CurrentBidder.abbr=Mángar
 CurrentBidderShort=Oferta más alta
 CurrentBidderShort.abbr=MnOf
-
-
-team.status.booked=Amistoso pactado
-ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
-
-
-# TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Esconder lastimado
-TransferSearchResultFilters.hideInjured=Esconder lesionado
-TransferSearchResultFilters.hideSuspended=Esconder suspendido
-TransferSearchResultFilters.days=Días\:
-
-# refer to transfer search form
-minimum=Mínimo
-maximum=Máximo
-
-# Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-rapidId.viewById=Vista por ID
-rapidId.senior=Mayor
-rapidId.youth=Juvenil
-rapidId.tournaments=Torneos
-rapidId.tournament=Torneo
-
-# SkillTable
-skillTable.switchView=Cambiar la vista de la tabla
-skillTable.addHomegrown=Añadir a todos los canterandos del equipo actual
-skillTable.showTimeInClub=Mostrar el tiempo desde que el jugador se unió al equipo mayor
-foxtrick.SkillTable.detach=Separar
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predicción resultado
@@ -1016,9 +1014,6 @@ MyMonitor.type.nt=Nacional
 # MarkAllAsRead
 MarkAllAsRead.title=Marcar los temas en todos los foros como leídos
 
-# TickerAlert
-TickerAlert.enable=Activar
-TickerAlert.sound=Sonido
 
 # tickers
 ticker.type.welcome=Mensaje de bienvenida
@@ -1037,26 +1032,13 @@ LocalTime.hattrick.title=Tiempo/Hora en Hattrick. Clic en el reloj para cambiar 
 LocalTime.local=Tiempo/Hora local
 LocalTime.local.title=Tiempo/hora local. Clicen el reloj para cambiar a la hora de Hattrick
 
-# Links
-Links.feeds=Fuentes de lista de enlaces(separadas por saltos de línea)
-
-#actions
-button.copy=Copiar
-rapidId.view=Vista
-Switch_view=Cambiar vista
-Detach=Separar
-AddHomegrown=Añadir canterano
-showTimeInClub=Mostrar tiempo en el club
-button.up=Arriba
-button.down=Abajo
-api.clearCache=Borrar cache
-api.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
-
 # fennec ui
 pageAction.rightMenu=Mostrar barra derecha
 pageAction.mainContent=Mostrar contenido principal
 pageAction.leftMenu=Mostrar barra izquierda
 pageAction.all=Mostrar todo
+
+sidebarBox.actions=Acciones
 
 # buttons
 button.ok=OK
@@ -1075,6 +1057,9 @@ button.restoreDefault=Restaurar predeterminado
 button.deleteToken=Borrar token
 button.disableAll=Deshabilitar todo
 button.revokePermissions=Revocar los permisos
+button.copy=Copiar
+button.up=Arriba
+button.down=Abajo
 
 status.loading=Cargando…
 status.loading.abbr=…
@@ -1091,6 +1076,8 @@ oauth.success=FoxTrick has sido autorizado correctamente\! Por favor recarga la 
 
 api.failure=El acceso a los datos en Hattrick falló. Necesitas autorizar a Foxtrick para que acceda a los datos de tu equipo. Si ya lo has hecho, revisa tu conexión o inténtalo más tarde.
 api.serverUnavailable=Server unavailable
+api.clearCache=Borrar cache
+api.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
 
 exception.error=Error %s
 
@@ -1101,14 +1088,22 @@ foxtrick.log.header=Log de Foxtrick
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
+Links.feeds=Fuentes de lista de enlaces(separadas por saltos de línea)
+TickerAlert.enable=Activar
+TickerAlert.sound=Sonido
 
+#toolbar
 toolbar.title=FoxTrick
 status.active=activo
 status.enabled=habilitado, pero no activo en %s
 status.disabled=inhabilitado
 
+# Captions and labels of foxtrick preferences
 prefs.title=Preferencias de FoxTrick
+
+prefs.view.by.category=Ver por categoría
+prefs.view.by.page=Ver de acuerdo a última página de HT
 
 module.screenshot=Captura de pantalla
 module.link=Puedes copiar y pegar este enlace al foro para dirigir aquí
@@ -1185,14 +1180,10 @@ about.developers=Desarrolladores
 about.translators=Traductores
 about.designers=Deseñadores
 
-prefs.view.by.category=Ver por categoría
-prefs.view.by.page=Ver de acuerdo a última página de HT
-
 prefs.restoreDefault.ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
 prefs.deleteToken.ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s? 
 prefs.disableAllModules.ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
 prefs.revokePermissions.ask=¿Estás seguro que deseas revocar todos los permisos opcionales?
-
 prefs.getPermissions.alert=%s necesita el permiso para trabajar. Permite el acceso en el siguiente cuadro de dialogo. Si no das el permiso, este modulo sera deshabilitado.
 
 ###EOF
