--- a/content/locale/eu/foxtrick.properties
+++ b/content/locale/eu/foxtrick.properties
@@ -126,10 +126,10 @@ pluralFormRuleID=pluralFormRule1
 
 
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 
 
+
+#copy
 
 
 
@@ -153,9 +153,6 @@ pluralFormRuleID=pluralFormRule1
 
 
 
-
-
-
 # TransferSearchResultFilters
 
 # refer to transfer search form
@@ -163,6 +160,7 @@ pluralFormRuleID=pluralFormRule1
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+
 
 # HTMSPrediction
 
@@ -179,17 +177,13 @@ pluralFormRuleID=pluralFormRule1
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-
 # fennec ui
+
 
 # buttons
 
@@ -203,8 +197,11 @@ pluralFormRuleID=pluralFormRule1
 
 
 # -----------------------------------------------------------------------------
-# Captions and labels of foxtrick preferences
+# option function strings
 
+#toolbar
+
+# Captions and labels of foxtrick preferences
 
 
 
@@ -213,8 +210,6 @@ pluralFormRuleID=pluralFormRule1
 
 
 # NOTE - please preserve the braces, inner content will be converted to link
-
-
 
 
 
