--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -410,23 +410,21 @@ HTLanguageChanged=Du muss an den Haaptastellunge vu FoxTrick astellen, datt deng
 
 Coach=Trainer
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Aktiounen
+
 managerButtons.writeInGuestbook=An d'Gëllent Buch schreiwen
 copy.copyplayerad=Annonce fir de Spiller an d'Tëschepalette kopéieren.
 copy.copied=D'Annonce fir de Spiller gouf an d'Tëschepalette kopéiert.
 
 
+#copy
 CopyRatings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copied.matchid=D'ID vum Match gouf an d'Tëschepalette kopéiert.
 copy.copied.postid=D'ID vum Message gouf an d'Tëschepalette kopéiert.
 copy.copied.posting=De Message gouf an d'Tëschepalette kopéiert.
+
+
 
 #matches
 matches.attackdefensebars=Stuerm géint Verteidegung
@@ -479,10 +477,6 @@ flagCollectionToMap.World=Welt
 
 # SkillTable
 
-Player=Spiller
-
-
-
 
 
 # TransferSearchResultFilters
@@ -492,6 +486,8 @@ Player=Spiller
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+Player=Spiller
+
 
 # HTMSPrediction
 
@@ -508,17 +504,14 @@ Player=Spiller
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-
 # fennec ui
+
+sidebarBox.actions=Aktiounen
 
 # buttons
 button.save=Späicheren
@@ -538,10 +531,13 @@ button.disableAll=All ofschalten
 
 
 # -----------------------------------------------------------------------------
+# option function strings
+
+#toolbar
+
 # Captions and labels of foxtrick preferences
-
-
 prefs.title=Astellungen
+
 
 
 # tabs in preferences page
@@ -581,9 +577,7 @@ prefs.additional.title=Zousätzlech Optiounen
 
 
 
-
 prefs.restoreDefault.ask=Bass de sécher, datt s de alles wëlls op déi normal Wäerter zrécksetzen?\nFirefox muss frësch opgemaach ginn, fir datt dës Ännerung gräift\!
 prefs.disableAllModules.ask=Bass de sécher, datt s de all d'Moduler wëlls ofschalten?\n
-
 
 ###EOF
