--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -414,23 +414,21 @@ HTLanguageChanged=Ju keni vendosur te faqa kryesore e preferencave të FoxTrick 
 
 Coach=Trainer
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Veprime
+
 managerButtons.writeInGuestbook=Shkruani te Libri i Vizituesve
 copy.copyplayerad=Kopjoni reklamën e lojtarit te tabela
 copy.copied=Reklama e lojtarit është shtuar te tabela.
 
 
+#copy
 CopyRatings.copied=Vlerësimet janë shtuar te tabela.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copied.matchid=ID e ndeshjes është kopjuar te tabela.
 copy.copied.postid=ID e postimit është kopjuar te tabela.
 copy.copied.posting=Postimi është kopjuar te tabela.
+
+
 
 #matches
 matches.attackdefensebars=Kollonat Sulm vs Mbrojtje
@@ -483,10 +481,6 @@ flagCollectionToMap.World=Bota
 
 # SkillTable
 
-Player=Lojtari
-
-
-
 
 
 # TransferSearchResultFilters
@@ -496,6 +490,8 @@ Player=Lojtari
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+Player=Lojtari
+
 
 # HTMSPrediction
 
@@ -514,17 +510,14 @@ CrossTable.table=Tabelen kryqezuese te sezonit
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-
 # fennec ui
+
+sidebarBox.actions=Veprime
 
 # buttons
 button.save=Ruaj
@@ -544,10 +537,13 @@ button.disableAll=Fik të gjitha
 
 
 # -----------------------------------------------------------------------------
+# option function strings
+
+#toolbar
+
 # Captions and labels of foxtrick preferences
-
-
 prefs.title=Preferencat
+
 
 
 # tabs in preferences page
@@ -587,9 +583,7 @@ prefs.additional.title=Opcionet të tjera
 
 
 
-
 prefs.restoreDefault.ask=Jeni i sigurt që doni të aktivizoni zgjedhjet standarte?\nFirefox duhet të fiket dhe të ndizet që ky ndryshim të aplikohet\!
 prefs.disableAllModules.ask=Jeni i sigurt që doni të fikni të gjitha modulet?\n
-
 
 ###EOF
