--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -373,23 +373,21 @@ HTLanguageChanged=Ви обрали опцію автоматичного роз
 
 Coach=Тренер
 
-# NOTE TO TRANSLATORS
-# Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-sidebarBox.actions=Дії
+
 managerButtons.writeInGuestbook=Написати в Гостьовій книзі
 copy.copyplayerad=Крпіювати інформацію про гравця до буферу обміну
 copy.copied=Інформацію про гравця скопійовано до буферу обміну.
 
 
+#copy
 CopyRatings.copied=Рейтинги матчу скопійовано до буферу обміну.
 
 
-
-
-copy.youthclub=hattrick-youthclub.org
 copy.copied.matchid=ID матчу скопійовано до буферу обміну.
 copy.copied.postid=ID повідомлення скопійовано до буферу обміну.
 copy.copied.posting=Текст повідомлення скопійовано до буферу обміну.
+
+
 
 #matches
 matches.attackdefensebars=Напад - Захист
@@ -438,10 +436,6 @@ flagCollectionToMap.World=Увесь світ
 
 # SkillTable
 
-Player=Гравець
-
-
-
 
 
 # TransferSearchResultFilters
@@ -451,6 +445,8 @@ Player=Гравець
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+Player=Гравець
+
 
 # HTMSPrediction
 
@@ -467,17 +463,14 @@ Player=Гравець
 
 # MarkAllAsRead
 
-# TickerAlert
 
 # tickers
 
 # LocalTime
 
-# Links
-
-#actions
-
 # fennec ui
+
+sidebarBox.actions=Дії
 
 # buttons
 button.save=Зберегти
@@ -497,10 +490,13 @@ button.disableAll=Вимкнути все
 
 
 # -----------------------------------------------------------------------------
+# option function strings
+
+#toolbar
+
 # Captions and labels of foxtrick preferences
-
-
 prefs.title=Налаштування
+
 
 
 # tabs in preferences page
@@ -540,9 +536,7 @@ prefs.additional.title=Додаткові параметри
 
 
 
-
 prefs.restoreDefault.ask=Впевнені, що хочете скинути всі налаштування?\nFirefox потрібно перезавантажити після скидання\!
 prefs.disableAllModules.ask=Впевнені, що бажаєте вимкнути всі модулі FoxTrick?\n
-
 
 ###EOF
